--- a/已经上传/光伏产业报告.md
+++ b/已经上传/光伏产业报告.md
@@ -75,5 +75,5 @@ tags:
 
 ## 七、思维导图
 
-![思维导图](https://github.com/linuxdeepin007/files/blob/main/BLOG/%E5%85%89%E4%BC%8F%E4%BA%A7%E4%B8%9A%E6%8A%A5%E5%91%8A.png)
+![思维导图](https://preview.cloud.189.cn/image/imageAction?param=82CA51C8C13F8291CD16B143232CCF8309B1D616A0242B82940190B35B65E2B23B0484225E1E5804F9DB3C649B419864FB0887D3986E78AAF11EEF036F0EF96ACC3930B9CADA8BBC9842762CB0C8AE5F0846118A515B5E4F5137F227D3578CD1F9BD1E34EA34CE702264D381EDD116EB)
 
