--- a/已经上传/公文种类、行文规范及范文004_通报.md
+++ b/已经上传/公文种类、行文规范及范文004_通报.md
@@ -1,19 +1,18 @@
 ---
-title: 公文种类、行文规范及范文——通知
-date: 2022-08-25 
+title: 公文种类、行文规范及范文004_通报
+date: 2022-09-14 
 categories:
    - 工作政治
    - 格式标准
 tags: 
    - 公文
    - 写作
-   - 通知
+   - 通报
 
 ---
-
-决定是“适用于对重要事项作出决策和部署、奖惩有关单位和人员、变更或者撤销下级机关不适当的决定事项”的公文。
+通报与通知的形式相近，但又不同于通知。 
 <!-- more -->
-具有权威性、指导性、稳定性、和长远性的特点，可以作为行政规范性文件制定的依据。
+适用于表彰先进、批评错误、传达重要精神和告知重要情况。
 
 ## 一、公文行文方向及种类
 
@@ -52,25 +51,12 @@ tags:
 - 党委、政府的部门依据职权可以相互行文。
 - 部门内设机构除办公厅（室）外不得对外正式行文。
 
-## 四、通知
-通知是传达上级指示，部署安排工作，实施管理措施，处理公共事务，任免聘任干部，批转、转发、印发下级机关、上级机关及不相隶属机关有关公文，要求下级需要周知事项等使用的公文文种。通知使用最广泛，使用频率高，实践中象工作计划、总结和领导讲话等一些非规范性公文也一般用通知下发。
+## 四、通报
+### （一）通报与通知对比
+- 作为文种，通知庞杂，含量大，形式多样，相比之下，通报内容、形式都比较单一。
+- 在实践中，一部分传达上级指示精神的公文既可用通知也可用通报。在内容上通报不同于通知的特点是一般不提出工作上的具体要求以及需要组织实施的事项。 
 
-### （一）通知分类
-通知按其内容和功用不同，可将通知分为批示性通知、指示性通知、告知性通知和任免通知等几种。
+### （二）通报写作要求
+通报文风要朴实。文字表述要简洁明快，言之有据，切忌夸张渲染。无论是表扬还是批评，都要以严肃认真、实事求是的态度认真核准事实，防止拔高或扭曲事实。
 
-### （二）通知的格式
-#### 1. 通知标题
-通知一般都要有一个符合标题的“三要素”，即：发文机关、事由、文种，使人一看标题就知道是通知什么事情或要求做什么事情。
-#### 2. 主送单位
-被通知单位就是文件的主送单位。
-#### 3. 其他
-如果所通知的事项需要被通知的单位尽快知道，可在“通知”之前加“紧急”二字，这就是常见的“紧急通知”。
-
-### （三）注意事项
-- 批示和指示性通知，防止将重要性或意义写的过长；
-- 告知性通知表述事项要清楚、准确、明确；
-- 语言运用上要平实无华，实事求是。
-- 
-### （四）范文示例
-![img](https://github.com/linuxdeepin007/files/blob/main/BLOG/%E9%80%9A%E7%9F%A5%E7%A4%BA%E4%BE%8B.png)
-
+通报观点要鲜明，提倡什么，反对什么，要是非分明，忌含糊其辞。在行文篇幅上要详略得当，切忌把表彰通报写成报告文学，把批评通报写成情况纪实。
