--- a/0常用模板.md
+++ b/0常用模板.md
@@ -1,4 +1,5 @@
-﻿---
+﻿# 常用模板
+---
 title: 英语语法学习建议
 date: 2022-05-23
 categories:
@@ -30,8 +31,7 @@ tags:
 
 ---------------------------
 
-
-年度读书计划模板
+# 年度读书计划模板
 ---
 title: 年度读书计划002——《深度工作》
 date: 2022-04-25 
@@ -54,3 +54,62 @@ tags:
 ## 二、行文脉络
 
 ## 三、摘录和思考
+
+------------
+# 会计模板
+
+---
+title: CPA——会计——01总论
+date: 2022-10-17
+categories:
+   - 经济金融
+   - 注册会计师
+   - 会计
+tags: 
+   - 总论
+   - 会计基础
+   - 计量属性
+   - 信息质量要求 
+---
+会计基础、假设、计量、会计质量要求。
+<!-- more -->
+
+
+-------------
+
+# 财管模板
+---
+title: CPA——财管——01原理
+date: 2022-11-07
+categories:
+   - 经济金融
+   - 注册会计师
+   - 财管
+tags: 
+   - 原理
+   - 利益相关者
+   - 资金时间价值 
+---
+
+财务管理的学科概述、利益关系和金融知识。
+<!-- more -->
+
+
+--------
+个人写作模板
+
+---
+title: CPA——财管——01原理
+date: 2022-11-07
+categories:
+   - 经济金融
+   - 注册会计师
+   - 财管
+tags: 
+   - 原理
+   - 利益相关者
+   - 资金时间价值 
+---
+
+财务管理的学科概述、利益关系和金融知识。
+<!-- more -->
