--- a/0分类标签.md
+++ b/0分类标签.md
@@ -2,10 +2,13 @@
 - 编程电脑
     - 办公软件
       - PPT
-      - EXCLE
-    - PYTHON
-    - LINUX
-    - WINDOWS
+      - Excel
+    - Python
+    - Linux
+    - Windows
+    - 博客搭建
+    - 软件安装
+      - 代理上网 
 
 ----
 
@@ -81,5 +84,7 @@
 
 -----
 
-- 关于
+- 个人博客
+- 关于读书
+- 关于写作
 
