--- a/0常用模板.md
+++ b/0常用模板.md
@@ -99,17 +99,15 @@ tags:
 个人写作模板
 
 ---
-title: CPA——财管——01原理
-date: 2022-11-07
+title: 寻找你自己的 "哈姆雷特"
+date: 2022-04-22 
 categories:
-   - 经济金融
-   - 注册会计师
-   - 财管
+   - 个人博客
+   - 关于读书
 tags: 
-   - 原理
-   - 利益相关者
-   - 资金时间价值 
+   - 方法
+   - 读书
+   - 感悟
 ---
-
-财务管理的学科概述、利益关系和金融知识。
+俗话说，适合自己的才是最好的。
 <!-- more -->
