--- a/CPA_财管002_财务报表分析和财务预测.md
+++ b/CPA_财管002_财务报表分析和财务预测.md
@@ -172,18 +172,152 @@ $ 现金流量债务比 = \frac {经营现金流量净额}{债务总额} $
 
 #### 3. 营运能力指标
 企业运用资产创造收入的效率，周转次数和销售百分比互为倒数。
-
-##### a. 周转次数（周转率）
+##### a. 比率计算
+###### i. 周转次数（周转率）
 周转次数 = 营业收入 ÷ 各类资产
 
-##### b. 周转天数
+###### ii. 周转天数
 周转天数 =  一年天数 ÷ 周转次数 = 一年天数 ÷ （收入 × 资产）
 
-##### c. 销售百分比
+###### iii. 销售百分比
 销售百分比 = 各类资产 ÷ 营业收入
 
+##### b. 应收账款周转率
+###### i. 应收账款余额的取值
+应收账款余额是特定时点的存量，受到季节、认为和偶然因素影响，最好使用多个时点的平均值，同时看题目要求。
 
-**杜邦分析体系**
+比如冰淇淋和羽绒服，年初年末余额取平均都会高估应收账款周转率。
+
+###### ii. 赊销情况
+实践中，往往使用全部营业收入计算应收账款周转率
+
+- 外部无法获得赊销额，只好使用营业收入
+- 相当于现销是收现时间等于零的应收账款
+
+高估了应收账款周转率（分子取值高），可能会影响应收账款的可比性。（不同公司赊销政策和比例可能会变动，）
+
+###### iii. 坏账准备
+计提坏账准备，导致应收账款净值变低，导致周转次数变多。其参考意义就不大，管理水平欠佳。
+
+所以应使用未计提坏账准备的应收账款原值计算。
+
+###### iv. 应收票据
+应收票据应当加入应收账款计算周转率
+
+###### i. 应收账款周转率解读
+- 应收账款应该与信用政策结合
+- 应该与销售分析和现金分析结合
+
+##### c. 存货周转率
+###### i. 存货周转率计算
+- 收入口径:判断短期偿债能力、总资产周转天数
+营业收入 ÷ 存货平均余额
+
+- 成本口径：存货管理业绩
+营业成本 ÷ 存货平均余额
+
+###### ii. 存货周转率不是越高越好
+- 内部来看，企业存货增加是不是主动的。
+
+#### 4. 盈利能力比率
+不单独考察，为后期学习杜邦分析体系做准备。
+##### a. 传统报表
+- 营业净利率
+营业净利率 =  净利润 ÷ 营业收入
+可以概括企业的全部经营成果。
+
+- 总资产净利率（ROA）
+总资产净利率 =  净利润 ÷ 总收入
+是企业盈利能力的关键
+
+- 权益净利率（净资产净利率）(ROE)
+权益净利率  净利润 ÷ 股东权益
+概括了全部经营业绩和财务业务业绩
+##### b. 管理报表
+- 税后经营净利率
+税后经营净利率 = 税后经营净利润 ÷ 营业收入
+
+- 净经营资产净利率
+净经营资产净利率 = 税后经营净利润 ÷ 净经营资产
+
+##### c. 代数关系
+
+营业净利率 × 总资产周转率 = 总资产净利率
+总资产净利率 × 权益乘数 = 权益净利率
+
+#### 5. 市价比率
+##### a. 每股收益
+$ 每股收益 = \frac{归属普通股股东的净利润}{流通在外的普通股股数（加权平均）} $
+
+###### i. 分子取值
+净利润减去优先股股息，不减普通股股利；
+
+**息税后利润**  = （息税前利润 - 利息） × （1 - 25%）
+税前减利息，税后减股息，不要减股利。
+
+###### ii. 分母取值
+`流通在外` 的 `普通股`  `加权平均`
+- 不包含库存股
+- 不包含优先股
+- 不应取期末数
+
+###### iii. 股份变动情况
+-|-|-|对股数的影响
+|:----:|:----:|----|----|
+-|有对价|股份发行（stock issue）|增加，考虑时间权重
+-|有对价|股票回购（stock repurchase）|减少，考虑时间权重
+-|-|-|
+股份变动|混合|配股发行（right issue）|
+-|-|-|
+-|无对价|股票股利（stock dividend）|考虑时间先后
+-|无对价|股票分割（stock split）|考虑时间先后
+-|-|-
+
+##### b. 每股净资产/每股账面价值
+$ 每股净资产 = \frac{归属普通股股东的净资产}{流通在外的普通股股数（期末数量）} $
+- 分子中净资产中要减去优先股清算价值和拖欠股息
+##### c. 每股营业收入
+$ 每股营业收入 = \frac{营业收入}{流通在外的普通股股数（加权平均）} $
+- 分子无需处理
+
+##### d. 市价比率
+市价比率 = 每股市价 ÷ 每股价值指标
+
+###### i. 市盈率（PE,PRICE-TO-EARNINGS）
+每股市价 ÷ 每股收益
+
+###### i. 市净率（PB,PRICE-TO-BOOK）
+每股市价 ÷ 每股净资产 
+
+###### i. 市销率（PS,PRICE-TO-SALES）
+每股市价 ÷ 每股营业收入
+
+#### 6. **杜邦分析体系**
+##### a. 杜邦分析公式
+- 总资产净利率 = 营业净利润 × 总资产周转率
+- 权益净利率 = 总资产净利率 × 权益乘数
+- 权益净利率 = 营业净利润 × 总资产周转率 × 权益乘数
+
+![杜邦分析体系](https://preview.cloud.189.cn/image/imageAction?param=473C1DF0C8D1D5B38632C81E034FB4156FCE702F83F9E42F248305B4403A83676E22DFAB09D189FF8CAE1B08AAE922BE2DE632001D686066E47CD0996CCA66E647F10690E61D07756E5DD6DCED746BD310714F0BB67F029CB194D26E8DD917841E2B35C9A1D80B1BAB3B5E4BE0C984E8)
+
+##### b. 杜邦分析体系中的平衡
+经营战略的平衡和财务政策的平衡
+###### i. 经营战略上的平衡
+- 营业净利率高，资产周转率低。【卖得上价，走不了量】
+- 资产周转率高，营业净利率低。【卖不上价，走得了量】
+- 两者经常反向变化，共同作用得到总资产净利率。
+
+###### ii. 财务政策上的平衡
+- 总资产净利率高，经营风险高，只能得到较少的存款，财务风险高
+- 总资产净利率低，经营风险低，可以获得较多的贷款，财务杠杆高
+- 总资产利润率与财务杠杆反向变动，共同决定了权益净利率
+
+##### c. 解题要诀
+资产负债表：资产 —— 负债 —— 所有者权益
+利润表：收入 —— 利润 —— 留存
+
+![总资产净利率](https://preview.cloud.189.cn/image/imageAction?param=DE2069A80317847061DEF7EE0F1FBBC0E782E3CB202C014DDE468066274050799FBA8C0A9E865B91824B63BBDE0021C3626E7FF6261113608CD8EC4D6024F009A3E11FF153F99BA2ABE6CEA4AB47723FFE3989950FE043777E7F25F880810F48E250320B974D5FE198F8C03D41467833) | ![权益净利率](https://preview.cloud.189.cn/image/imageAction?param=70A7CA3976D37E79971CD6BEDAA42B818C8575BA8137BBB2B201CF02677ECAB26BBBF8F19E9857105A6B78100D70FE272F5813095467A2A26043A5283144C83C05FAE7A2F6835AF7927112201EAF0CD68BC7CC4FD9841C55FF480D3CA36BF7074AAAE84E0A3BBF02CA88FED86D42BB12) | ![权益净利率-两步](https://preview.cloud.189.cn/image/imageAction?param=465D65AB72C1097720C4716C82D502662C50FC3BA71D166EF0221B74C21F78D1ADBC77859BD1D58DD442E766CE45D14663F4AC614F5E21CC974A24621EA36A122A3E20AB1B5CFA5277BA1F9748AADF48EA52D8C67514C59B399CA51D59BE730C394DFC7F3A994CA9EBDCE763E5C2FCE2) | ![权益净利率-三步](https://preview.cloud.189.cn/image/imageAction?param=997F6091A8AE3DD70115228AD983F544A7D59CF0487F4070DC7E414AC51E32F86B6C6F073E9E70BC408DC7D43D985C27C620FCBACE9619C37BAFD7C66FBCA71656299291AD8AB50D786AB4EBC6EBD6B5086A2F9480F46098A47A7070D2787424AA5BB8BC29F2F5A16F07A0EDDBCD1FD8)
+---|---|---|---
 
 ### （二）管理报表
 #### 1. 三张管理报表
