--- a/UPLD/倪海厦_天纪001_开篇.md
+++ b/UPLD/倪海厦_天纪001_开篇.md
@@ -42,3 +42,78 @@ tags:
 
 **命相同拆**
 
+
+## 四、《易经》思维模式
+> 何为 “象”
+
+“象”只有一次，也就是时机。就能够预测后面的结果，从而可以规避调一些东西。例如，`天水讼` ： 天是外，是健； 水是内，是险，外健内险的结果就是讼，即打官司。
+
+天机道，就是用《易经》的象来看；人间道，用《易经》卦来批，判断事情的准确性时机的掌握；地脉道，讲的是风水和地理。
+
+## 五、正名
+### （一）“地理”
+风水，讲究的是山川河流，青龙白虎，前山靠山，看地势；地理，讲的是室内的布局。
+
+居住的环境，地理要大于风水；而祖坟讲究的是风水，不叫地理，阴宅完全是风水。
+
+### （二）占卜
+> 君子静而观象，动而占卜
+
+君子静看世间百象，以果决其行，占卜，所谓“占”是断一个事情。佛家，万法规一；道家，抱元守一；儒家，执中贯一。
+
+## 六、前期准备
+《易经》把天地分为了九宫八卦。天地有八方（东南西北上下左右）图像是**坐北朝南**。在人间道叫做长幼有序。
+
+- 西北方向为乾卦，中国西北方向为高原。代表天，父亲；
+- 西南方向为坤卦，代表地，母亲；天地在养育众生
+- 东方为震卦，在自然界的象是雷，东方为初阳，也就是第一男孩子，长子。所谓的东宫太子。
+- 东南方向是巽卦，在自然界的象是风，长女位；
+- 南方是离卦，在自然界的象是火，次女位；
+- 北方是坎卦，在自然界的象是水，二子；
+- 东北角是艮卦，在自然界的象是山，三儿子；
+- 西边是兑卦，在自然界的象是泽，三女儿位；
+
+
+巽|离|坤|
+|:---:|:---:|:---:|
+震|-|兑|
+艮|坎|乾|
+
+## 七、阳宅学
+阳宅学的本质就四个字：长幼有序
+
+如果在 “天文” 中算命，这个人没有儿子，算命只是个工具，是“命”，阳宅是“地理”，是运，运是掌握在自己手上的。把上图切开来看，在南边居住的话，都是女；在北面居住的话，都是男。所以可以掌握神男女。
+
+如果床压着东边的墙壁会有负负得正的效果，本来生女儿，会生男孩，本来没有儿女，会有儿女。比如，算命没有儿子，厨房在东宫，一刀两断，就是双胞胎儿子，如果厨房在东北角就是双胞胎女儿，如果厨房在西北和正东的中间就是一男一女。
+
+### （一）阳宅学中的象-厨房
+> 天所赋为命
+
+厨房的象是：刀。
+
+就和人躺在手术台上动刀是一样的。如果把厨房放在西北角，就是杀父亲；有的夫妻为什么太太先去世，厨房在西南角，有的儿子早早夭折，因为厨房在东宫。
+
+算命就是还没有发生，用果来决定行为，把东边厨房改成卧室，就会变成名位相等，厨房可以放在西边等没有人的地方。如果正好三男三女，可以放在“不管带”，八个宫，还有16个宫没有用。
+
+阳宅学大部分在形上面做文章，没有用到神，阳宅学在形上面的讨论很复杂，其实如果了解到其中的神，就很简单。
+
+### （二）阳宅学中的象-厕所
+厕所的象是：空气不好，污浊，纠纷，关系不好，黄金冲掉（破财）等
+
+厕所摆在正东方，大儿子呼吸系统会出问题，如果摆在西北角，父亲会破财。所以厕所要摆在无人带，要重新装修，最好的是我自己来设计，然后由施工来施工，这个房子是可以传世的，子孙只需要装修一下就可以一直住下去，因为“神”还在。
+
+### （二）阳宅学中的象-客厅
+客厅的象是：客就是来去
+
+如果客厅在东方，儿子来去自如，基本不在家中；如果客厅在西北角，父亲就会把家当旅馆，在外面有家或者是很辛苦。
+
+一般来说客厅放在西南角，放在妈妈的位置。结婚后，女方要从男方。在卦象上女方就是`地天泰` 男方住在先生的位置重合就是乾为天。
+
+男方住在女方位置就是`天地否`
+## 八、批字
+> 坚心。
+
+用象，用神而不是形。
+
+文字也是象，并不是死的。例如 “福”字。
+
