--- a/UPLD/梁东对话倪海厦001_学医之路.md
+++ b/UPLD/梁东对话倪海厦001_学医之路.md
@@ -33,17 +33,17 @@ tags:
 
 医院化验的各项指标，是科技不是科学。
 
-### （一）小青龙汤、大青龙汤
-#### 1. 涉及到表寒里寒用小青龙汤。
+### 小青龙汤、大青龙汤
+#### 1.涉及到表寒里寒用小青龙汤。
 表寒：毛孔塞住、无法排汗。病人怕冷，关节疼痛。
 里寒：在肺部。痰是清白的。
 
-#### 2. 治病的策略
+#### 2.治病的策略
 甲流症状：表寒，没有流汗，发烧；病人喜欢喝冷水，黄痰。 
 
 张仲景几千年来治疗瘟疫，都是用大青龙汤。大青龙汤一共七味药：麻黄、桂枝、甘草、杏仁、生石膏、生姜、大枣。几千年来，病毒变异了好几代，但是大青龙汤仍然有效，**中医治疗的思路是如何将病毒排出体外，不伤害我们的身体，而不是将病毒赶尽杀绝。**
 
-#### 3. 关于大青龙汤
+#### 3.关于大青龙汤
 > 为什么温热派的不敢用大青龙汤，因为里面有麻黄和桂枝。
 
 **麻黄**
