--- a/UPLD/倪海厦_天纪004_64卦图解.md
+++ b/UPLD/倪海厦_天纪004_64卦图解.md
@@ -39,7 +39,7 @@ tags:
 
 我们在看煞星的时候，特别要注意，后面我们排出来的八字以后，都会有，庙、旺、利、陷，这个就是所谓星辰的亮度。亮度当然会影响。比如说今天太阳出现在白天，太阳很大，很亮，结果呢，天上乌云密布，太阳光没有办法透过去，他代表亮度不太好；如果是吉星，像我们前面说过的，反正所有的吉星入庙旺都最好，在利的时候是平平，在陷的时候是最差。那如果你遇到煞星在陷地，那是差中更差，你懂不懂我的意思，凶中之凶。如果你遇到陀罗星，结果火星是入庙，庙旺的话，这个煞星反而会变成吉星。
 
-![星辰的亮度](https://preview.cloud.189.cn/image/imageAction?param=C9B3690CDC4F08F580F8801D72BC78BE7D3E97377D192160B1B454B8AACE2F6C61AE271FB6A1D185970FC23838CBBF97A874B86D53D506826B7DA057AA9530BFD461526032C1BF0E2847E80FA6E13F9424CC6C566248DF68EEA2AE4FF91CCEC6FBB10BCE8161185A00C281FF75DDC65E)
+![星辰的亮度](https://preview.cloud.189.cn/image/imageAction?param=E4B314E5092C7DEB3C5CB16AD6007B4CBBB37BC593E29B6F8CA7DB14B3DE449B2AC295CAB44049ACCE91608ED1FAA6C9BF6C9B23E16D44FE97DD385B1E8AC6F768FDD156D83E8203CDDCDF72A06BD79724FADAF2FFDC27AC31D383CEBBE1ED7D1AFFFEF32CCA895ADFDE5E34CBE0E22C)
 
 **怎么解释煞星变成吉星？**
 
@@ -159,7 +159,7 @@ tags:
 
 我们假设从戌宫开始起子，比如说，你是43年生的，年干是甲午年，那民国83年，今年，在盘中占哪一个宫，我们怎么算，83-43+1=41岁，那41岁到底怎么算，我教各位一个方法，很快，从戌宫起子，我把几个宫用红色画起来，
  
-![计算今年占哪个宫](https://preview.cloud.189.cn/image/imageAction?param=1FD6C9CA04659C78F86C46840461C394A7161C0098771E5DADE6F1B15341F60798DCB00A7D26E66390D157556D0A6B2F4951CB15C9CDF08FF3D3D940E85E54A1659F95BA5C076F9C522308D4C15AC8FAD30EF92D0877936BB48CFCD48C2DDFD9F3A8D5C2C6F91D0A85D578E6111F8487)
+![计算今年宫](https://preview.cloud.189.cn/image/imageAction?param=DA1B411FE205C30A191C4E8D076930051EA8A9BAB90BCCE3573F67D478E3A572D06DFDDE6F0731C0595C2D7A6AF6839E0A9E5E4FB13EF9A664EBA0AC5D400D0364C41100CE82825C8DC9165917A49AEB07D5C2EE17E0D40D1AA016E61D24B77DAD38778A6ED9310DB9F43E7CDCF7AF9A)
 
 其他的不要看，我们从戌这里起子，子丑寅卯辰巳午为申酉戌亥，从这边开始算，算到午的时候，我们晓得午在这里，对不对，哦，他是甲午年生的，那就从午宫开始算一岁，那从午宫开始往上转，**男顺女逆**。你不要一个个数，一圈回来这个午宫就是13，再回来就是25,37，那38、39、40、41就在申这边了。懂不懂，很快的。因为给诸位排的那个层次没讲这个。你用这个方法一推就出来了。为什么不写在里面，外面电脑程序上面写几岁几岁，整个宫看的很乱，你会confuse，不需要，我们这样一看就好了，就算到了。
 
@@ -233,9 +233,9 @@ tags:
 所以我们研究易经八卦，可以让自己变成那个卦，也可以那个人变成那个卦，然后看到这个人在什么状态之下，我们就知道他目前处在哪一个卦的第几爻，然后从这个爻要往上走，如何从这个爻，从这个卦，让他变成地天泰，或者火天大有，或者是进入乾为天，一下，你的念就改过来了。这就是易经。所以我们讲易经的时候，从乾为天第一个讲，第一个这是天的性，天的定位，再来讲坤为地，天地定位，然后开始循环了，就好像手表一样，一分两分，那如果你走到25分，如何变成，我们马上就看到了，你会变成什么，然后就是26，27,28，我们就看到了，这就是我们要学的东西。就是站在外面看到里面藏什么。
 #### 1.乾为天 [䷀]
 
-![乾为天](https://preview.cloud.189.cn/image/imageAction?param=A55E1310AF9C225AAC76B0E7DE3C4989B4E12729B69A9691148A3329A92697405FFB6E254B553838AF7630BAD4E6C03AEB34396183000BAB9847CADB4F99E5E2C317A764E9E609574C2D308BBBF4683EF2085A98D42533FC7BD99BA7FDF12393879F22DADEFED8E5E9FF4D85117139ED)
+![乾为天](https://preview.cloud.189.cn/image/imageAction?param=9009257B37F34902A1D93BBF9621A156C414767E6DAD7F02FC41BD7AF0A87EFBBD3D7D44129D5D5A70B212C25F4AD83C49F4430077CEEF2F4F91EDA9534BDB2D719DBD6BEE8EF519434390AA42D033D14F87602E42E6ED80BC3D6AC8DD94D21332E66789B811B42BBA3BD01796707650)
 
-![乾为天](https://preview.cloud.189.cn/image/imageAction?param=0DDA81085054890EEF297EF33A7B7190F50FB3EF537582FE074C13E6BAE8589563757AE67A50C32005DFFA1D9790BB7628A88560EF98BDE23907E3CC0182029F4ED9766BDA55BBEE455EDCF7303787814DF56040A27157BDACD62230E3FA6AB2A9EC492B3763BEBA75683D0A37174584)
+![乾为天](https://preview.cloud.189.cn/image/imageAction?param=B90E35E85FC98557D1D9648B16DA4931984EBD27654ABA4FD4DBCDC3CFB34C7AE5C8CF39CD0DA7D11BD4EF74F3C40EBB42AE27280FDD65795983FC5E8CCA09201EF8F82DC975562E6ADF1A45E544EE0792D4EFFB42B436FC31DF2DC21F19B060B0BC374B365A4D38BF96106130C5A44B)
 
 这个图有个官人在登梯，有没有，空中有个路，有个人在那里磨玉。玉上面有光，月在空中，这是什么意思啊，下面这个解曰，你不要看，只是把那个图，解释一下。
 
@@ -302,7 +302,7 @@ tags:
 
 ![坤为地](https://preview.cloud.189.cn/image/imageAction?param=E7EC9C46C99D63892CC6550FBCEAE8F8164E6F4D2F3BE624AA0FB791FFC33D0453EAD5A0FF4A91844A5F9865A798848B95F964EEAD94C5BDD568B53EDCA9D6C9BF7DD1C2465B2B0D4907CBA5601F246C79FBF51D9C71FE1D2166284333019B773F62A2BC884A4061DF261C2989FBD71E)
 
-![坤为地](https://preview.cloud.189.cn/image/imageAction?param=498AA6CE42611A1E117A76CF019E550A6D4884556675455D440B048E87A38FE8EB393CB0BC73A7C929BBAC6C225CD7135281FBEA98D7D9FC310BF3673F2A8944CBD0EC68801B1329932DB6A91889B2A5285348A76C47E27C6AC4C25D8BC2E627B249727124A8F01F4C7849F45FD61A1F)
+![坤为地](https://preview.cloud.189.cn/image/imageAction?param=3BB61656D74984F05D9F5A8B93ED255EEA03B27A22E0609F858AFA5C2387A8D287A851BCC411506D22283D4F0D008B23E66A59FA442E1957F51F0C9EA9DA5AB51BD862061B518FE495F170B8274AFACA5051228649DE73BA1961FCDF04DAF8F21AF365F5A65447695B4F66376F3740AB)
 
 有个人，从空中下来，一个猴蹲在那边，一个墙，一个马在下面，一个十一个嘴巴，口在中间，两串钱在地上，一个人坐到，一个人站着，官人啊，什么意思啊。诸位呢，进入占卜，如果你占卜，卜到这个卦，坤为地，有几种解释，我统统解释给你听。
 
