--- a/UPLD/公文种类、行文规范及范文004_通报.md
+++ b/UPLD/公文种类、行文规范及范文004_通报.md
@@ -60,3 +60,7 @@ tags:
 通报文风要朴实。文字表述要简洁明快，言之有据，切忌夸张渲染。无论是表扬还是批评，都要以严肃认真、实事求是的态度认真核准事实，防止拔高或扭曲事实。
 
 通报观点要鲜明，提倡什么，反对什么，要是非分明，忌含糊其辞。在行文篇幅上要详略得当，切忌把表彰通报写成报告文学，把批评通报写成情况纪实。
+
+## 五、通报范文
+
+![通报示例](https://preview.cloud.189.cn/image/imageAction?param=0DAFA84158A6C8572875E3D208F84F211D876CAB1AB993D3E6D61475CB3B53A630949A4824AECE4A2B579159042D1FB3244548B43C9E546B30901AA607912E1D01D156241CF70AF783DD1A46D52D19A05D4C102ACA476087C7FE64CAD3EFEAF723B0A9D76668BFB8AE3F10B4A629A9D6)
