--- a/CURRENT/驻村工作总结.md
+++ b/CURRENT/驻村工作总结.md
@@ -5,22 +5,25 @@
 2021年4月，受组织选派，我到河北省灵寿县马家庄村报到，光荣的担任我委派驻南寨乡马家庄村党支部的第四任第一书记。现将两年来工作情况和驻村体会做简要汇报。
 
 ## 一、马家庄村基本情况
-南寨乡马家庄村位于灵寿县城北6公里，全村常住人口390户1375人，建档立卡脱贫户15户41人。在各级领导关怀下，驻村工作队、历任驻村第一书记和两委班子共同努力下，2019年整村脱贫出列。马家庄两委班子成员共8人（支部5人、村委3人），目前村内产业主要有蔬菜水果种植、养殖、葡萄加工等，村集体收入主要以光伏发电、食用菌大棚、冷库租赁为主，2021年村集体年收入约20万元。
-经过半年来的同吃同住同劳动，我遍访村里的常住居民，在走访过程中搜集整理了大量的村民意见建议，对马家庄的村情村况了然于胸：脱贫攻坚战打响以来，贫困村民生活水平大幅提高，脱贫户人均年纯收入远高于国家标准；村内现有产业扶贫项目运行正常；村民生活水平逐年提高，村集体收入逐年增加。
+河北省灵寿县南寨乡马家庄村地处平原，行政面积2400亩，耕地1600亩。全村常住人口375户1375人，党员64名，村两委班子8人（交叉任职一人），其中支部5人，村委3人。马家庄村自2011年起开始大规模种植葡萄，2017年被原农业部评为“一村一品”示范村。近几年，村内又逐步发展起精品西瓜和食用菌种植，生猪、蛋鸡养殖也颇具规模，还发展起来了葡萄深加工和木制酒桶加工等多样化种养殖及加工业。
+
+2019年10月，全村最后2户贫困户实现脱贫出列，圆满完成脱贫攻坚任务。马家庄村现有脱贫户15户40人，2021年全村建档立卡脱贫户人均纯收入12000余元。脱贫摘帽不是终点，而是新生活、新奋斗的起点。马家庄村在各级党委和政府领导下，按照省委省政府、市委市政府的部署，始终坚持抓党建、强基础、兴产业，通过开展产业帮扶、消费帮扶等，落实“四个不摘”要求，巩固拓展脱贫攻坚成果，全面推进乡村全面振兴，努力建设振兴路上的秀美村庄。
 
 驻村工作也面临新的形势和挑战。首先，今年是换届之年，驻村工作队员进行了轮换，新一届村党支部和村委会还处在磨合期，工作过程中摩擦不断，宗族派性问题有所抬头，基层党建工作面临压力；其次，村内项目施工缓慢，个别项目涉及土地赔偿问题，加之项目工期紧张，亟需推动解决。面对困难和阻力，在地方各级党委和政府的支持协调下，马家庄村各项工作都在有序地向前推进，但隐藏的风险和不确定不稳定因素也需引起高度重视。
 
 ## 二、驻村以来的工作
-通过广泛的调研和入户走访，搜集整理老党员和群众对马家庄村发展的意见，我与驻村工作队分析研判，召开村“两委”会议就产业发展积极会商，确定了“围绕三产融合发展”的乡村振兴发展思路，并按此重点开展了以下工作：
+两年来，和村民们同吃同住同劳动，我遍访村里的常住居民，在走访过程中搜集整理了大量的村民意见建议，对马家庄的村情村况了然于胸：脱贫攻坚战打响以来，贫困村民生活水平大幅提高，脱贫户人均年纯收入远高于国家标准；村内现有产业扶贫项目运行正常；村民生活水平逐年提高，村集体收入逐年增加。我与驻村工作队分析研判，召开村“两委”会议就产业发展积极会商，确定了“围绕三产融合发展”的乡村振兴发展思路，并按此重点开展了以下工作：
 
-#### （一）抓党建强基础，完善乡村治理。
-2021年4月，马家庄村完成了“村两委”换届选举工作，产生了新一届两委班子，在巩固拓展脱贫攻坚成果与乡村振兴有效衔接的重要时期，加强新一届党支部建设，夯实党建引领作用，对于马家庄村来说有着特殊重要的意义。身为驻村第一书记，夯实党建责无旁贷。一是完善制度建设，规范党支部组织生活。为了能够让新一届村两委定期沟通村内事务，形成“遇事通气，定事商议”的工作习惯，充分发挥党支部领头羊作用，制定完善了村两委例会制度和值班制度。因地制宜落实“三会一课”制度，多次召开党支部会议、组织召开党员大会，努力转变村两委干部的思想观念，让他们真正认识到抓好党建的重要意义。二是探索党支部结对帮扶方式，推动资源整合。利用国家发改委驻村帮扶的有力优势，马家庄村先后与农经司、体改司、价格认证中心等结对共建，开展党日活动，慰问困难群众。通过线上线下多种方式，开展学习交流，为村内项目建设、产业发展出谋划策。三是开展政治理论学习，强化政策宣传引导。利用村委广场宣传栏，张贴惠农利农政策法规。积极推进“党史学习教育”舆论宣传工作，鼓励村支部成员在田间地头广泛宣讲党的政策。
+#### （一）以政治建设统领基层党组织建设，打造乡村振兴坚强战斗堡垒。
+农村基层党组织与基层群众距离最近、联系最广、接触最多，是党在农村全部工作和战斗力的基础。民族要复兴，乡村必振兴；乡村要振兴，“领头雁”得配强。村两委班子不团结，村干部能力不足，基层党组织软弱涣散，乡村振兴将步履维艰；只有基层党组织坚强有力，乡村振兴才会蹄疾步稳。
+
+**一是完善落实制度，规范党支部组织生活凝聚力量。** 为了能够让新一届村两委定期沟通村内事务，形成“遇事通气，定事商议”的工作习惯，充分发挥党支部领头羊作用，根据马家庄村实际情况，制定完善了村两委例会制度和日常值班制度。按照规定，因地制宜落实“三会一课”制度，把制度规定落实到实际工作中。用会议的形式多沟通，用谈话的形式多交流，多次召开党支部会议、村“两委”会议，组织召开党员大会、村民代表会，努力转变村两委干部的思想观念，让他们真正认识到抓好党建的重要意义。只要齐心协力就没有干不成的事业，只要团结一心，就没有做不好的工作。**二是支部结对共建，提升党建水平探索帮扶新模式。** 目前，马家庄村党支部分别与国家发改委两个司局和一个委属事业单位的党支部开展了结对共建活动。通过多种形式开展线上线下交流活动，充分利用支部共建这个有利抓手，拓展基层党组织功能，发挥各自党组织的自身优势，定期组织经验交流，提高党建水平，丰富党内生活。同时还通过支部共建活动，先后联系对接美团、阿里巴巴等大型企业，在人员技术培训、农产品上行、村庄基础设施建设方面支持马家庄村发展。通过开展的各类活动，2021年至今累计销售葡萄、西瓜、黑花生等农产品价值40余万元，同时也为县域内发展吸引给类投资、资源价值100余万元。**三是开展政治学习，强化政策宣传作用转变旧思想。** 利用村委广场宣传栏，张贴惠农利农政策法规。积极推进“党史学习教育”舆论宣传工作，紧贴时政热点，农业农村发展，开展舆论宣传工作。第一书记和村“两委”成员在田间地头广泛宣讲党的方针政策、讲解惠农助农方针。先后开展纪念建党百年、辛亥革命110周年纪念活动、观看二十大开幕，定期组织党建年会等集体活动，开展重温入党誓词、升国旗等，使每一位党员、每一名村干部都汲取强大的精神力量，形成共同谋事、共同议事、共同干事的氛围，村两委才能心往一块想，劲儿往一块使，利用先进思想武装头脑，用老百姓听得懂的语言，将理论知识宣传出去，落后的、旧的思想自然就被取代。**四是亮明党员身份，发挥党员先锋作用带头当榜样。** 如何更好发挥党员的先锋模范作用，为乡村治理添把劲儿，强化党员意识，发挥党员作用至关重要。针对村内老党员居多的现实情况，我们为村里每位党员配发了党徽，同时制作了“共产党员户”标识牌，让每个党员都亮明身份利用广大村民来监督党员们的一言一行，时刻提醒每位党员要发挥好自己的模范带头作用。在新冠疫情常态化防控最要紧关头，党员同志们积极报名参加志愿活动，参与到村口关卡测温登记和常态化核酸检测服务工作之中，带领村内青年成立疫情防控志愿小组，为隔离在家的群众运送生活物资，在村民中树立了榜样，赢得了赞赏。
 
 #### （二）扩展产业发展，谋划三产融合。
 一是巩固拓展扶贫产业。持续支持村内精品农业发展。村内现有果蔬大棚11座，年产蔬菜瓜果40余吨，产品销往山西、北京等地。2022年计划新建瓜果蔬菜大棚3座，种植培育新的彩虹瓜西红柿品种。二是助推三产融合发展。立足于村内传统葡萄种植，在小葡萄上做大文章，通过葡萄深加工项目、消费帮扶等经济手段，促进葡萄种植成规模促增收。村内目前建有酒桶加工厂和葡萄种植园区，积极推进葡萄种植、葡萄深加工、葡萄园观光采摘融合发展。主动对接石家庄市红酒销售及各大代理商，在葡萄酒厂品牌打造、销售分销等方面开展合作交流。三是积极开展消费帮扶。 2021年以来，通过各种渠道，累计帮助销售农产品5000余斤。在离退休干部局的支持下，采购县内农产品14800余斤，价值14余万元。积极联系对接河北省电力公司，采购村内食用菌、大棚蔬菜等农产品。
 
 #### （三）巩固脱贫成果，防止返贫致贫。
-一是严格落实“四个不摘”。成立防返贫工作室，将扶贫成效巩固工作作为重点之一，和驻村工作队一道，定期入户走访，落实各项帮扶政策，确保不发生规模性返贫和新的致贫。在建党100年的当天，开展感党恩走亲活动，为脱贫户送去米和食用油等慰问品。二是开展就业培训。联系灵寿县就业局，在村内开展为期一周的就业培训活动，参加培训120多人次。积极开展政策宣讲，为脱贫户联系工作岗位等。三是开展医疗义诊。配合村卫生室免费为村里80岁以上老人开展免费体检活动，通过每年的体检活动，不仅能够对重大疾病做到早发展早治疗，还能对有慢性疾病的脱贫户进行动态监控，确保不出现因病返贫、因病致贫。
+一是严格落实“四个不摘”。成立防返贫工作室，将扶贫成效巩固工作作为重点之一，和驻村工作队一道，定期入户走访，落实各项帮扶政策，确保不发生规模性返贫和新的致贫。在建党100周年的当天，开展感党恩走亲活动，为脱贫户送去米和食用油等慰问品。二是开展就业培训。联系灵寿县就业局，在村内开展为期一周的就业培训活动，参加培训120多人次。积极开展政策宣讲，为脱贫户联系工作岗位等。三是开展医疗义诊。配合村卫生室免费为村里80岁以上老人开展免费体检活动，通过每年的体检活动，不仅能够对重大疾病做到早发展早治疗，还能对有慢性疾病的脱贫户进行动态监控，确保不出现因病返贫、因病致贫。
 
 #### （四）改善人居环境，做好疫情防控。
 一是开展村内垃圾清理。广泛动员村干部及脱贫户公益岗人员，开展垃圾清理工作，清理清运建筑垃圾及杂草20多吨，使村庄环境得到极大改善。二是开展农村厕所革命。按照县政府统一部署要求，积极推进村内连茅圈摸排拆除工作，同村两委干部先后多次入户走访摸底，村内新建水冲式厕所70余个，提升改造厕所200多个。三是开展新冠疫情常态化防控。积极宣传疫情防控、扎实推进新冠疫苗接种。组织村干部、脱贫户，在村口认真开展测温、登记。近期石家庄疫情又起，我和村干部一起多次对街道进行消杀，协调组织国外返村人员居家隔离，购买各类消杀物品，为村里高龄老人送去口罩等防疫物品。
@@ -32,4 +35,4 @@
 
 **二是清清楚楚地体会到驻村第一书记的使命光荣和责任重大。** 2021年脱贫攻坚取得了全面胜利，这里面凝结着省、市、县、乡、村五级书记真抓实干的努力和牺牲奉献，832个贫困县全部摘帽的背后是一个个鲜活的生命兢兢业业、无私付出。在和脱贫户的交谈中，我听到最多的是感谢党、感谢政府，我看到最多的是他们脸上洋溢的朴实的笑容，从脱贫攻坚迈向乡村复兴，这是一项更加艰巨复杂的任务。青春最大的幸运，莫过于个人目标与国家命运同向而行；青春最大的价值，莫过于个人成长与国家进步交相辉映，作为驻村第一书记，我感觉到使命在心、责任在肩，要经风雨、见世面，壮筋骨、长才干，努力成为可堪大用能担重任的栋梁之才。
 
-脱贫摘帽不是终点，而是新生活、新奋斗的起点。逐步实现由集中资源支持脱贫攻坚向全面推进乡村振兴平稳过渡是实现脱贫攻坚与乡村振兴有效衔接的关键过程，我想这也是驻村帮扶的工作和派驻第一书记的意义。两年的时光转瞬即到，我也将结束挂任第一书记的这段旅程。
+当和煦的春风给每一棵树穿上绿纱，当夏日的雨流过村落的每一个角落，当秋日丰收的玉米砌满了谷仓，当厚厚的雪还给大地一片白雪皑皑，坐落在县城北方一隅秀美的马家庄村，又一次走过了她的一年四季。脱贫摘帽不是终点，而是新生活、新奋斗的起点。逐步实现由集中资源支持脱贫攻坚向全面推进乡村振兴平稳过渡是实现脱贫攻坚与乡村振兴有效衔接的关键过程，我想这也是驻村帮扶的工作和派驻第一书记的意义。两年的时光转瞬即到，我也将结束挂任第一书记的这段旅程。
