--- a/CURRENT/倪海厦_天纪012_案例民国50年、55年、火雷噬嗑、山火贲、山地剥、地雷复.md
+++ b/CURRENT/倪海厦_天纪012_案例民国50年、55年、火雷噬嗑、山火贲、山地剥、地雷复.md
@@ -1,6 +1,6 @@
 ---
-title: 倪海厦_天纪012
-date: 2023-02-12
+title: 倪海厦_天纪012_案例民国50年、55年、火雷噬嗑、山火贲、山地剥、地雷复
+date: 2023-03-01
 categories:
    - 医学生活
    - 中医
@@ -14,7 +14,9 @@ tags:
 “ `天纪` 已经于1994年完成，当时只收约20位学生，包括精英份子，有许多司法官，律师，民间人士来研习。其实`天纪`的知识无法去害人，只有助人，只要他们帮助到须要帮助的人，我的目的就达到了。
 
 <!-- more -->
-## 一、民国50年
+## 一、民国46年
+
+![民国46年-1](https://preview.cloud.189.cn/image/imageAction?param=3B40D46F68EB1E55840E2606592642EEFF021194B6E30ACE919D198BF7B8207111D23DC6A6F8B7214B0223F591F6FBE4C78E877A523B5CC8FE303680B672F45D953CB16E5C9B2C272D53B0A5910C743E2D96D5A9CD31E6145CDF9E76B86A30D2BD7D201EB6C4653AC8C27148D5A85C3B)
 ### （一）三方四正
 #### 1.巨日格
 我跟诸位提出这个八字，一定有原因的。像这样的八字，如果你的兄弟姐妹，尤其是姐妹有拿到，后者是小孩子。生个女儿，发现她是这样子，开始就要注意。
@@ -22,23 +24,23 @@ tags:
 首先我们复习一下前面介绍的，注意各位，化忌来冲命，命中没有吉星的时候，化忌只要对冲命，这个我们已经叫做半空折翅，半空折翅以40岁为一个界限，40岁之前，这个是所谓的半空折翅。那女孩子拿到这种命，我们女孩子，巨日格，巨门太阳坐命的人哦，特别要注意，像她这个是反背的，太阳星陷地在亥时，命宫刚好在这里，那这个人呢，他的小限在这里，1岁在未宫这里，女孩子是逆转，她是酉年，是属鸡的，
  
 那你如果是巨日格，属鸡的，更麻烦了。因为鸡本来就是多是非口舌的，你看那个周围吵架的，都是属鸡的。那逆转，1岁，2岁，3岁，3岁的时候，第一个化忌就来冲太阳星，这个父母宫有廉贞、破军，有杀星在父母，代表父母会离散，那离散的时候，看他太阳是陷地，这个太阴星化禄，代表她从小就是母亲来抚养她的，妈妈在抚养她，我们呢，看相。相上面有两种状况：
-- 第一个，日角陷，主丧父，月角呢，主丧母。
-- 第二个地方在哪里看，如果你看日月角都是挺起来的时候，有时候一个人的官运很好的时候，日月角会挺起来，看眉毛，如果左眉主父亲，右眉主母亲，高者先丧，什么叫做高者先丧。
+- 第一个，日角陷，主丧父；月角陷，主丧母。
+- 第二个地方在哪里看，如果你看日月角都是挺起来的时候，有时候一个人的官运很好的时候，日月角会挺起来，看眉毛，如果左眉主父亲，右眉主母亲，**高者先丧**，什么叫做高者先丧。
 
 有个人在你面前，哎，奇怪，这个人，这个眉毛高，这个眉毛矮一点，眼睛是一样的。高眉，这边是妈妈，这边是父亲，就是高的眉先走，懂不懂，所以这个眉毛比较高，代表妈妈先不在，左边的眉毛比较高，代表父亲先不在。那两眉都很高了，代表没有后顾之忧了。所以你看很多当官的两个眉抬起来，就是都没有了。
 
-当然，我们前面介绍了，如果你一个眼高一个眼低，然后两个眉毛又不想等，这种人是庶出。这样看父母亲就看的很清楚，那八字看这个太阳陷地也能看得到，这是第一个我们要注意的。第二个，这种八字的格，还有第二个解释，就是这个人呢，女孩子的命，但是拿到男人的格，所以一辈子要像男人那样的辛劳，所以巨日格的人，她的命一定主偏房。你先不用看她，她这个命本来就属于偏房格。
+当然，我们前面介绍了，**如果你一个眼高一个眼低，然后两个眉毛又不想等，这种人是庶出**。这样看父母亲就看的很清楚，那八字看这个太阳陷地也能看得到，这是第一个我们要注意的。第二个，这种八字的格，还有第二个解释，就是这个人呢，女孩子的命，但是拿到男人的格，所以一辈子要像男人那样的辛劳，所以**巨日格的人，她的命一定主偏房。**你先不用看她，她这个命本来就属于偏房格。
 
 #### 2.破军星
-所以这个八字早年要丧父，14-23岁进入破军星，破军星代表一个人就很辛苦了，这个时候要出来做事啊，工作了，所以这个人读书一定读的不多，就开始工作，那跟她的母亲呢两人相依为命，那24-33岁这段时间，化科，化科代表读书，真正化科最好的时候，读书的时间是14-23岁这段时间最好，结果这段时间没有化科，因为对面是化禄，禄存啊，变成24-33化科，所以这个化科变成什么，后来的空中大学，或者是她到社会上来学习到专业技术专长，学习到专业的东西，所以24-33岁，她因为是化科，33岁还是在帮人做领固定的薪水。那进入34-43，南北斗星君来会，统统吉星来会，代表34-43岁，她自己会自己做事业当老板，然后她的事业会非常的顺，你看，因为她在44-53岁进入事业宫，如果太阴星没有化禄，在事业宫，讲的是官禄，如果没有化禄就当官，有化禄就从商，这个贪狼也是横财星，那她连续三十年都是从商，事业会很好，这是她是事业，做生意。
+所以这个八字早年要丧父，14-23岁进入破军星，破军星代表一个人就很辛苦了，这个时候要出来做事啊，工作了，所以这个人读书一定读的不多，就开始工作，那跟她的母亲呢两人相依为命，那24-33岁这段时间，化科，**化科代表读书，** 真正化科最好的时候，读书的时间是14-23岁这段时间最好，结果这段时间没有化科，因为对面是化禄，禄存啊，变成24-33化科，所以这个化科变成什么，后来的空中大学，或者是她到社会上来学习到专业技术专长，学习到专业的东西，所以24-33岁，她因为是化科，33岁还是在帮人做领固定的薪水。那进入34-43，南北斗星君来会，统统吉星来会，代表34-43岁，她自己会自己做事业当老板，然后她的事业会非常的顺，你看，因为她在44-53岁进入事业宫，**如果太阴星没有化禄，在事业宫，讲的是官禄，如果没有化禄就当官，有化禄就从商**，这个贪狼也是横财星，那她连续三十年都是从商，事业会很好，这是她是事业，做生意。
 
 #### 3.第一个限
-那子女很简单，七杀，她就一个儿子在旁边。那第一次，诸位看，第一个限，我们看她的红鸾天喜在哪里，天喜在子，红鸾在午，这个婚姻，14-23，早年天喜红鸾星就来会，所以第一次婚姻她会比较早，为什么，因为她没有父亲的依靠，比较想早点成家，没有安全感，那诸位到这个巳这里要注意看了。如果14-23的红鸾星会动的话，25,24,23,23在夫妻宫这边，22,21,20，会到天喜星的时候，没有会，没有会到，为什么，因为20岁那年有天喜星会到，但是因为太阳星还是不亮，隔年的，两年，我们要看会不会结婚，一定要看隔年，所以说，她本身14-23岁本身有天喜红鸾来会，可是她在20岁就结婚，在婚姻来说并不是很好，有一种办法会结婚，就是父母亲都在，会push她结婚她就会结婚，但是这个婚姻一定会有问题，不可以。所以我们平常看婚姻看限的时候，怎么算呢，一个，你在进入34-43岁之间的时候，吉星统统来会的时候，再来结婚。
+那子女很简单，七杀，她就一个儿子在旁边。那第一次，诸位看，第一个限，我们看她的红鸾天喜在哪里，天喜在子，红鸾在午，这个婚姻，14-23，早年天喜红鸾星就来会，所以第一次婚姻她会比较早，为什么，因为她没有父亲的依靠，比较想早点成家，没有安全感，那诸位到这个巳这里要注意看了。如果14-23的红鸾星会动的话，25,24,23,23在夫妻宫这边，22,21,20，会到天喜星的时候，没有会，没有会到，为什么，因为20岁那年有天喜星会到，但是因为太阳星还是不亮，隔年的，两年，**我们要看会不会结婚，一定要看隔年，** 所以说，她本身14-23岁本身有天喜红鸾来会，可是她在20岁就结婚，在婚姻来说并不是很好，有一种办法会结婚，就是父母亲都在，会push她结婚她就会结婚，但是这个婚姻一定会有问题，不可以。所以我们平常看婚姻看限的时候，怎么算呢，一个，你在进入34-43岁之间的时候，吉星统统来会的时候，再来结婚。
 
 #### 4.福德宫
 24-33岁，是在福德，女孩子的福德代表婚姻，你看在33岁以前，都是是非多，你看都是是非星，你看巳宫是巨门星，不要结婚，比较好，所以她在34-43岁结婚的话，她才会好，可是你要找到，机会只有一次哦，她不会说结婚之前来找你，她一定是结婚后，很多人常常都是发生问题才来找我们的，这个时候，象已经出现了，她已经结婚离了婚了，这个时候我要帮她去改的时候，很难哦，很难，因为她本来就是偏房命，如果她的命本来是正房，正房离婚以后，再嫁也还是正房，那这种是属于偏房命，偏房命她第一次机会会有，会有结婚，那结了婚就会离。
 
-所以第一次你看她14-23岁，天喜星来会，但是因为天喜星逢破军，所以这一次婚姻不会成，有对象，但是不会成，吉星来会，一定要有好的星，破军星在里面，不会成的，那第一次婚姻，26岁在午宫，廉贞天相禄存，代表说各方面的机会都来了，她26岁会结婚，这个26岁结婚，很快速哦，一结婚就生小孩，子女会非常好，一结婚以后，27岁就完蛋了，她结婚才一年，真的是一年，那完蛋了，原因是什么，所以注定是偏房命，她结了婚之后，第二年，陀罗星进来，这个巨门化忌，巨门代表是非官司啊，她27岁的时候犯了官符，被陀罗，受到别人的拖累，陷入官司是非纠纷，然后先生呢不谅解她，跟他离散。为什么不谅解她，因为这个女孩子，这种太阳星落陷的人，这种个性的人，我常常形容说，是指着晚上的星星说是太阳，怎么会把月亮看成太阳，应该是月亮的时间嘛，脾气很刚强很固执，又带火星，又很拗！
+所以第一次你看她14-23岁，天喜星来会，但是因为天喜星逢破军，所以这一次婚姻不会成，有对象，但是不会成，吉星来会，一定要有好的星，破军星在里面，不会成的，那第一次婚姻，26岁在午宫，廉贞天相禄存，代表说各方面的机会都来了，她26岁会结婚，这个26岁结婚，很快速哦，一结婚就生小孩，子女会非常好，一结婚以后，27岁就完蛋了，她结婚才一年，真的是一年，那完蛋了，原因是什么，所以注定是偏房命，她结了婚之后，第二年，陀罗星进来，这个巨门化忌，**巨门代表是非官司**，她27岁的时候犯了官符，被陀罗，受到别人的拖累，陷入官司是非纠纷，然后先生呢不谅解她，跟他离散。为什么不谅解她，因为这个女孩子，这种太阳星落陷的人，这种个性的人，我常常形容说，是指着晚上的星星说是太阳，怎么会把月亮看成太阳，应该是月亮的时间嘛，脾气很刚强很固执，又带火星，又很拗！
 
 好了，她离婚的原因，大家可以推理，她的先生很好，可是一定是她先生告诉她，不要相信，可是她不信邪，她一定要去做，结果官非是非，离婚了，散掉了。那如果做了以后，受人家拖累，有官司是非，她听先生的话还好，可是她犯了，还死不承认哦，结果害到自己，哦，我们要迷途知返，那她迷途不知返，所以很多命是偏房的人，是自己把自己害成偏房啊。根据我的经验，她的个性使然，她的作为使然，造成她成为偏房，她偏不要偏不要，造成她自己成为偏房。因为偏不要就是她是个性。这是第一次红鸾星。
 
@@ -48,24 +50,29 @@ tags:
 
 还有一个偏房的地方可以看到，这个朋友宫，贪狼星，这个贪狼是桃花星，落在朋友宫，所以这有两个解释，她做生意的话，有合伙的朋友很多；合伙的男性居多，然后她跟人家同居在一起，一定是这样的结果，所以她的合伙人也就是她的同居男友也就是她的不正名的先生。没有名分的先生。
 
+## 二 民国41年
+
+![民国41年](https://preview.cloud.189.cn/image/imageAction?param=AFE21C8F102144A4E93F289850987C3F396EE7B5A0F45CB2188526FED23A37D167E890E0C416B43DD84620F0A75C38C81E0FCAA429922AE8E63C2638B8A389950D82FB0A4E81946E4D9DCF5BCA1C4C8EA583E769982EF5FFCA451A96057A4EC9A260DDE8A4474BCC634B561A6D1F85F4)
+
+### （一）三方四正
 我们批八字的时候，**科权禄忌要先圈起来。**
 
-#### 5.兄弟宫
-像这个命的人，诸位看，看六亲，看兄弟和父母，兄弟宫化忌，父母宫是吉星落陷，对面是廉贞破军，有没有，这种八字就叫做六亲不靠，靠不了六亲，有的人兄弟很强，父母很旺，可是靠不了六亲，灾星都在六亲方面，所以她要辛苦独立成家，这种命的女孩子呢，也是巨门太阳，看到没有，诸位只要看到这种，就可以把她批为偏房命了，你说老师怎么你老师喜欢批偏房命，那正房很好的就不用批了嘛。那告诉诸位重点是：
+#### 1.兄弟宫
+像这个命的人，诸位看，看六亲，看兄弟和父母，兄弟宫化忌，父母宫是吉星落陷，对面是廉贞破军，有没有，这种八字就叫做**六亲不靠**，靠不了六亲，有的人兄弟很强，父母很旺，可是靠不了六亲，灾星都在六亲方面，所以她要辛苦独立成家，这种命的女孩子呢，也是巨门太阳，看到没有，诸位只要看到这种，就可以把她批为偏房命了，你说老师怎么你老师喜欢批偏房命，那正房很好的就不用批了嘛。那告诉诸位重点是：
 
-第一个，命里面，什么都没有，只有一个化科进来，看到没有，四化星来说，只有化科进来，像这种人，她有几种，自由业，医师律师会计师建筑师，还有呢，老师，老师也是化科。所以这个一定是有专业技术专长，才艺出众的一种人。
+第一个，命里面，什么都没有，只有一个化科进来，看到没有，四化星来说，只有化科进来，像这种人，她有几种，自由业，医师律师会计师建筑师，还有呢，老师，**老师也是化科。** 所以这个一定是有专业技术专长，才艺出众的一种人。
 
-那像这个兄弟宫有化忌的话，这里还特别要注意这里有一个天刑，天刑代表是非官司刑克，有两个解释，第一个，兄弟宫化忌代表夭折，兄弟夭折可以从眉毛里看出来，一个人左边的眉毛呢，代表兄弟，右边的眉毛代表姐妹，眉毛中间有痣，在相上面，叫做草里藏珠，是兄弟大贵。贵格，那有痣露在外面，没有藏在眉毛里，那就主兄弟夭折，还有呢，眉毛断掉了，断眉，兄弟有夭折。那种乱眉，长得乱七八糟，扭来扭曲去的，兄弟有刑克，有牢狱之灾，他为他兄弟担心烦恼，一天到晚打官司坐牢怎么办，就会有这种现象出现，反之，到姐妹这边来就变成姐妹。
+那像这个兄弟宫有化忌的话，这里还特别要注意这里有一个天刑，**天刑代表是非官司刑克**，有两个解释，第一个，兄弟宫化忌代表夭折，兄弟夭折可以从眉毛里看出来，**一个人左边的眉毛呢，代表兄弟，右边的眉毛代表姐妹**，眉毛中间有痣，在相上面，叫做草里藏珠，是兄弟大贵。贵格，那有痣露在外面，没有藏在眉毛里，那就主兄弟夭折，还有呢，眉毛断掉了，**断眉，兄弟有夭折**。那种乱眉，长得乱七八糟，扭来扭曲去的，兄弟有刑克，有牢狱之灾，他为他兄弟担心烦恼，一天到晚打官司坐牢怎么办，就会有这种现象出现，反之，到姐妹这边来就变成姐妹。
 
-#### 6.父母宫
+#### 2.父母宫
 像这个八字，父母宫是廉破，也代表父母亲离散，诸位看，命里是太阳，读图啊，她的命跟太阳走得近，第一个脸孔比较像爸爸，第二个跟太阴星走的比较远，中午出月亮，所以会先不见妈妈，再不见爸爸，先母后父，跟着父亲，看的很清楚。
 
-#### 7.官禄宫
-那这个官禄宫，是擎羊星，灾星进来，所以这个人从事公务人员不会，但是从事教职很好，就是教学教书，我们研究命理，特别要注意，有一个天道，就是说，遇到流年不好的时候，如果你在当官或者是做事情，遇到流年不好怎么办，没有关系，读书最好，我们李**就是当官时候官运不好嘛，我去读书，47岁拿到博士，今天才会干总统哦。所以他有两个大优点，第一个，始终如一，从个最小的公务员干到今天最大，他从来没有换过，所以今天干到总统，这是第一个优点。第二个，他想通了，流年不好我去读书，君子进德修业，所以你以为读书没有进步，你错了，他读书才是真正的进步，他当年没有这个动作今年不可能干总统了，这句话就讲完了。对啊，把你名字取得再好也没有用啊。
+#### 3.官禄宫
+那这个官禄宫，是擎羊星，灾星进来，所以这个人从事公务人员不会，但是从事教职很好，就是教学教书，我们研究命理，特别要注意，有一个天道，就是说，遇到流年不好的时候，如果你在当官或者是做事情，遇到流年不好怎么办，没有关系，读书最好，我们李就是当官时候官运不好嘛，我去读书，47岁拿到博士，今天才会干总统哦。所以他有两个大优点，第一个，始终如一，从个最小的公务员干到今天最大，他从来没有换过，所以今天干到总统，这是第一个优点。第二个，他想通了，**流年不好我去读书，君子进德修业** 所以你以为读书没有进步，你错了，他读书才是真正的进步，他当年没有这个动作今年不可能干总统了，这句话就讲完了。对啊，把你名字取得再好也没有用啊。
 
 这个命里面，你看红鸾天喜星在这边，天喜在巳，红鸾在亥，一定是对宫，那第一个，她的流年，25岁在戌宫这边，女孩子是逆转，25,26,27,28,29,30岁到巳宫，30岁会有婚姻，你说老师啊，她35-44岁天喜红鸾来会啊，这是第二次哦，不是第一次啊。第二次婚姻哦。
 
-所以说，我们批女孩子的命，福德宫很重要，现在她的福德宫很好，如果福德宫不好的话，第二次婚姻都很难，福德宫很好的话，第一次会结婚，那逢到流年，吉星来会的时候，大小流年，30岁进来天喜红鸾星就会动，如果在忌，化忌之前，比如说25,26,27,27岁她有会到太阳啊，可是没有过忌，没有过忌的话，婚事不成哦。不容易成功。等会我会举例给你们看，很好玩哦，他还没有过忌，他就去结婚，订婚，订婚了才发现她的未婚夫是已经结婚了的，还没有离，你说累不累哦，就会发生一些事情让她想结婚，对，你是想法很好，想法跟事实不见得是一样的哦，造成这样，到30岁会结婚，所以一定是过忌，过忌以后，第一个红鸾天喜星就会结婚，一结婚以后，她这个命，本宫这样，她的命本来就是主偏房命，我告诉你，很奇怪哦，所以我说诸位算命哦特别要注意这个格，其他的很简单，像这种命你会看了，其他的太简单了，男女是同格，就好像我们中医在看病一样，男女的病都一样就女孩子多了一个妇科，我现在讲妇科，其他都正常就好了嘛。
+所以说，我们批女孩子的命，福德宫很重要，现在她的福德宫很好，如果福德宫不好的话，第二次婚姻都很难，福德宫很好的话，第一次会结婚，那逢到流年，吉星来会的时候，大小流年，30岁进来天喜红鸾星就会动，如果在忌，化忌之前，比如说25,26,27,27岁她有会到太阳啊。不容易成功。等会我会举例给你们看，很好玩哦，他还没有过忌，他就去结婚，订婚，订婚了才发现她的未婚夫是已经结婚了的，还没有离，你说累不累哦，就会发生一些事情让她想结婚，对，你是想法很好，想法跟事实不见得是一样的哦，造成这样，到30岁会结婚，所以一定是过忌，过忌以后，第一个红鸾天喜星就会结婚，一结婚以后，她这个命，本宫这样，她的命本来就是主偏房命，我告诉你，很奇怪哦，所以我说诸位算命哦特别要注意这个格，其他的很简单，像这种命你会看了，其他的太简单了，男女是同格，就好像我们中医在看病一样，男女的病都一样就女孩子多了一个妇科，我现在讲妇科，其他都正常就好了嘛。
 
 那她是38岁那年，流年在酉，这一年来找我们的，这个在38岁先生死掉，过世啊，死掉了，38岁先生走，夫妻是死别，这个，好玩在哪里，死别之后呢，38岁夫妻死别，她看那个房子是伤心地，死背她怎么住的，夫妻住这里，西北角是厨房，死别以后呢，换了，西北是主卧房，西南是厨房：还没有出事之前，住这里哦：
  
@@ -73,12 +80,15 @@ tags:
 
 所以一个阳宅住进去的时候，快的话，三年，三六的数，慢到第六年，一定会成灾。灾的呈现马上就开始了，第三年就开始，所以她住这个房子，到第三年，她先生就走了，三年过去没事，第六年就第二个灾，所以她住的第一个宅很凶。那她先生死掉了，她很伤心，她就另外找一个房子，就变成这样子了，为什么之前不找，之后来找，那之后再住这个房子的时候，本来她的命上面，35-44，事情过去了以后，你看，42岁是不是还有红鸾星来会，可是她就去住在这个位置上了，就不会了，懂不懂，就不会结婚了。所以说，这种命是偏房的人，除了我刚才所讲的行为个性，这个她的个性就很好，没有像刚才那个那么拗，对，然后她就这样做，害自己变偏房，因为她住西南方，思想会超越年龄很多，然后变成责任感很重，念头就变成婚姻看的不是很重，我可以就是爸爸，母兼父职嘛，我就带孩子就好了，好了，结束了，她就变成这样子，所以一个人的想法会改变她的做法，做法会改变她的命。这里跟诸位讲这些，就是我们改位置，就是要改一个念，一个念而已，一念之间。
 
-#### 8.大限
-还有，诸位看她的大限。55-64，这十年是廉贞破军这些灾星，大限！49,50,51,52,53,54,55,56，56岁在卯，诸位注意到，55-64这十年在疾厄宫上面，反过来，这十年中间，值年的值日星就是讲的是他的疾厄，他的身体一定会很差很差，病痛，那进入小限56岁，同时会到疾厄宫，身体方面大限55-64逢到疾厄，小限56岁又会到疾厄，疾厄上面是大小二限逢，那廉破的话，这就是死啊。水里做坟墓，就是死掉了。56岁。那我们讲女孩子，如果你的妈妈，家里的长辈，长辈身体要好，有三个卦可以让他身体好，泰卦，坤为地，地风升，也就是正西北，正西南和正东南。妈妈住在这三个位置上，你说妈妈你住南边好了，地火明夷卦，本来还没那么快死呢，你住进去死的更快。这是我们化解的方式。所以，我们在改宅的时候，要特别注意哦。改阳宅的时候，要特别小心。当然这个升卦我们还没有讲，但是诸位已经大概了解了。
+#### 4.大限
+还有，诸位看她的大限。55-64，这十年是廉贞破军这些灾星，大限！49,50,51,52,53,54,55,56，56岁在卯，诸位注意到，55-64这十年在疾厄宫上面，反过来，这十年中间，值年的值日星就是讲的是他的疾厄，他的身体一定会很差很差，病痛，那进入小限56岁，同时会到疾厄宫，身体方面大限55-64逢到疾厄，小限56岁又会到疾厄，疾厄上面是大小二限逢，那廉破的话，这就是死啊。水里做坟墓，就是死掉了。56岁。那我们讲女孩子，如果你的妈妈，家里的长辈，长辈身体要好，**有三个卦可以让他身体好，泰卦，坤为地，地风升，也就是正西北，正西南和正东南。** 妈妈住在这三个位置上，你说妈妈你住南边好了，地火明夷卦，本来还没那么快死呢，你住进去死的更快。这是我们化解的方式。所以，我们在改宅的时候，要特别注意哦。改阳宅的时候，要特别小心。当然这个升卦我们还没有讲，但是诸位已经大概了解了。
 
 
-## 二、民国55年
+## 三、民国55年
 ### （一）三方四正
+
+![民国55年](https://preview.cloud.189.cn/image/imageAction?param=199ABE6DD9E37396828F353B397B0A6EC9AF38B9A74F574362826FBA423DDB0BF6D75A96F5028A3D3E7791350A7B5E72FA672FEE4E1284411C374FCA57C7273236F620A173409B0F597D689E95EBD31CAB5B36A4EB1EC69849455308DDEF86ACB03AC52DA7F0D0136E3A844A2128C1E5)
+
 诸位看这个命，
  
 民国55年，81年算的，刚好流年27岁，像这个是午年，属马的，马年刚好在辰这里，25岁在这里，26,27,27岁流年在寅宫，现在算这个流年有没有问题，27岁她化忌，诸位看，23-32岁她的大运里面就有红鸾天喜星，看到没有，所以这个女孩子，在23-32岁这段期间，除了化权，除了事业以外，她的红鸾星影响她很大，好，结果她刚好，今年27岁她来找你，好，我们在算命的时候常常会发现到一件事情，她会跑来算，都是流年不好的时候跑来算的，那流年化权啊升官发财的时候，都不会找你来算的，那个化忌的都来了，所以进来一看，化忌！化忌在印堂上，红红的，口舌是非很多，再一看，是廉贞化忌，她是逢到桃花星化忌，结果她就是去结婚，结果订婚了啊，订婚了才发现先生的婚姻还没解决还没离婚，不能结婚，停在那边，这是化忌！所以我们给人家算命，一再说，要过忌，过忌的婚才是吉的！才最好。
@@ -103,7 +113,8 @@ tags:
 
 那我们还有一个地方要帮她改的，我刚才讲，如果32岁以前不让她结婚的话，她就接不了婚了，所以她33岁来找我们的话，是她的命哦，32岁以前来找我们，是她的运哦。所以她27岁来找我们，太好了，知不知道，第一个，第一次婚姻要舍掉，你如果说小姐你稍微等一下给这个男的一个机会，这是愚善，人家刚开始就在骗你的，懂不懂我的意思，你后面还给他机会啊，他不骗你你怎么会跟他订婚呢，对不对，已经骗你了，你还在给他机会。很多太太十之八九都是这样子，蠢得要死，害的别人来问导致两个人一起蠢，所以遇到这种情形，马上要她当机立断，舍掉，舍掉以后，西北角不要住了，她会遇到这种人，跟她的运有关系，马上住到东南角去，那如果你寅宫这年改，第二年丑年没有星，如果我们31岁在戌宫去改，32岁那年让她红鸾星动，是不是很好，32岁如果她能够结婚的话，她的先生是巨门化权，会到化禄，这就是从商的，先生是做生意的。因为我们知道这个八字会做生意，我们让她嫁一个做生意的人，刚好门当户对，你如果让她嫁一个紫薇天相文曲，是做官的，如果我们让他30岁改，到31岁结婚，让她嫁一个紫薇天相这种先生的话，33-42变成夫妻聚少散多，天马星就变了，变成聚少散多，所以让她嫁个同行最好。
 
-## 三、民国 年
+## 四、民国34年
+![民国34年](https://preview.cloud.189.cn/image/imageAction?param=68AB6F746053A7369E7B1455898D81E338F8DF770C6061EEBFD051970485A634E040068C5B394ADBBDF038DB554B9D5120D39944E751D448E2D90561587CB3F7429D0882ADB24548089D722B323C457EB68C193D62BEAF0438D041249860633A943D89D1234374C5B6F3054E2D482562)
 ### （一）三方四正
 诸位看这个酉年，属鸡的,25，37,49统统在未宫这边，顺转：
  
@@ -125,8 +136,8 @@ tags:
 #### 3.夫妻宫
 然后，你注意看他的夫妻，廉贞天钺，这个桃花星坐夫妻宫，这个男的更妙呢，不是漂亮的我不追，他老婆都很漂亮哦，那破军星坐命的男的，不见得怎么漂亮，所以你常常看一些女孩子很漂亮，嫁一个先生很丑，你知道为什么吗，我告诉你为什么好了，因为漂亮的女孩子她常常被人家追，她心里想，嗯，如果我先生长得很帅，也是这样子，我宁可嫁一个先生比较安分，比较老实的，这是她认为的哦，有的男的外表长得不好但是桃花照样也有啊，对不对，第二个，她觉得这种人有安全感，她就找他。所以这个男的反而变得好命。那你说好命坏命怎么看啊，女人就说这怎么可以，男人就说好，这很难讲啊。看各人的认定。有没有疑问。像这个批疾厄的话，肝病，会不会批。以此类推。
 
-## 四、六十四卦
-### （一）火雷噬嗑
+## 五、六十四卦
+### （一）火雷噬嗑 [䷔]
 #### 1.卦辞
 火雷噬嗑。这个前面是风地观卦。观之后，会有噬嗑的现象，观之道，我们要周观，观了以后，我们看的很清楚以后，我们会相聚在一起，好像诸位来这里上课，同道会相聚在一起，聚在一起的时候，人的聚，观后必有聚合。但是人一聚合的时候，人以群聚，中间一定会有隔阂，有间隙，因为有聚合，有间隙，所以就会有噬嗑的象出现，噬嗑是什么，噬嗑是咬东西的象，你拿一个东西放在嘴巴里面咬，咬碎掉然后吞下去，这个动作，就叫做噬嗑。 
 
@@ -140,9 +151,9 @@ tags:
 #### 3.读图
 占卜，各位看这个，这个卦很好玩，很妙。诸位看这个图： 
 
-![火雷噬嗑]()
+![火雷噬嗑](https://preview.cloud.189.cn/image/imageAction?param=F7DC62380CC3ED7422FFA725840D084566441FD8A36D4C73650EA34E8A184DB8DC772FB032088AA5EF514AE1DC25D94AB2BF6E6F91B443C0D9E32EDEC636441A6F78A4BF22787C9A01A8B637958C423A79B251E682C8F6E25F4E87BD8D2C545F88B8E11D49B814FBD6F0964535C1B9F4)
 
-![火雷噬嗑]()
+![火雷噬嗑](https://preview.cloud.189.cn/image/imageAction?param=0AADBFBBD7315F31E4D16D8F3E5714A4593838CDD0A4C6E5F80BF7233B36991A3F539B5D3DE36CB744E279839EE0FA98DC800FA773274878F71C78DD88D90B921715D1C5D0DB2AD8C15CD74B96D39A1CFC95ACA73B4279BC82BD9F736217DE14F14D82F286DA1583C9098552B5E06469)
 
 有的女的在那边烧香拜，地上两串钱，一个鹿站在地上，那个字，憂是不是这样写，喜呢，旁边一只鸡在吃稻子，天上有北斗七星。 
 - 首先知道北斗星，是君王的象，代表夫君，丈夫，也代表公职，到公家单位任职。诸位这个要会哦，我们以后介绍易经推命的时候，你的流年是火雷噬嗑，看，看看像什么。了解我的意思把，一个卦可以代表一年，也可以代表十年哦。也可以代表一个月。 
@@ -163,7 +174,8 @@ tags:
 - 事业财禄皆吉。为什么，咬。你发现你女儿出去赚钱很厉害，你没有儿子，把女儿当作儿子，发现你女儿出去很厉害，哇，一直住在噬嗑卦上面。事业上很厉害。所以小的时候，见人就咬，长大了见钱就咬。就会变成这样子。一直在咬。这是形容小地方一个家里面的情况。
  
 噬嗑卦，如果你的办公室是朝南进门，然后你坐东宫，噬嗑。那是发女人的。女孩子做老板坐在那里比较好。男孩子坐那边就会钱财亏空，为什么，因为北斗星在那里嘛，无又喜的象。
-### （二）山火贲
+
+### （二）山火贲 [䷕]
 #### 1.卦象
 你要是不小心把它念成喷，也无所谓啦，不要被字形绑到。贲卦是从噬嗑卦来的，噬嗑卦咬合了以后，合聚之后，必有文饰，这个饰呢就是贲。把各种电路连在一起，合在一起，我们给他一个名字，叫做录音机，名就会出现。贲的道，讲的就是人的外饰，外饰的程度。 为什么叫山下有火呢。这个山下有火的时候，火一点起来，照在那个地方，火一点起来，山下的草木可以看的很清楚，火一照，草木都好像染上了色泽一样。这就是文饰。外表，衣服啊，也是饰，所以我们外在的，就是求饰，也就是易经讲的山火贲。 
 #### 2.人间道
@@ -179,9 +191,9 @@ tags:
 #### 3.读图
 占卜：诸位看这个占卜，卜卦的时候，如果你的金钱卦一卜，得到山火贲： 
 
-![山火贲]()
+![山火贲](https://preview.cloud.189.cn/image/imageAction?param=8CC0C76BB00DC0ADF20003FA416E295297ADB4F97F605CCB6D2E32AF67E3C58CFA8560BB81569F072E02FA98DE0043CB437D4D43FF7C45C082D366C709B419994B3FD4B4946A4259911F3364EE9DCCA6597F28F71AB0E17D423BA1AF408399B3FBF6902BA616FCD7EACF4038FA5388ED)
 
-![山火贲]()
+![山火贲](https://preview.cloud.189.cn/image/imageAction?param=6029AC7D8B8575F0C19A54917BE93112B091796010AE5A998A0288A442E2A606F15CF9C50FD09D36A2316EA44D875D7A313A15D737F6575B1170245E33862AFA13C5101AB07E7A760CEDC41B146B0AD6840B3A24D90B62895B23585484D515195CE4661E18313FA621E1F561C12E7D61)
 
 雨在那里下，车行船，船张帆在江中，官人著公服登梯，仙女云中执珪。整个一个图在那边。 
 第一，雨下，代表满。代表成也。代表润下，润泽，滋润的意思。 
@@ -196,73 +208,94 @@ tags:
 第三个呢，内实过刚之象。 
 第四个，身体多烫伤。 
 第五个，婚姻不成。 
-第六个，兴科甲。考试大利。如果哪一天你发现到你三儿子读书考试不好，放到山火贲的位置，考完试再离开，我们每个卦有不同的使用方法，但是如果你大儿子结婚了，从此就没有山火贲了，懂不懂我的意思，你就要用别的卦来发科甲，你不要老是在那边想着这个山火贲。这是阳宅部分。 
-************************************************************** 
-山地剥。 
+第六个，兴科甲。考试大利。如果哪一天你发现到你三儿子读书考试不好，放到山火贲的位置，考完试再离开，我们每个卦有不同的使用方法，但是如果你大儿子结婚了，从此就没有山火贲了，懂不懂我的意思，你就要用别的卦来发科甲，你不要老是在那边想着这个山火贲。这是阳宅部分。
 
-这个剥卦的来源是贲之极。万事到了极限，太过了，而招剥，剥就是损害啊，脱落啊，招凶。诸位看卦爻，从1到5都是阴，到最顶才是阳，意思就是说，如果你一开始发现小人，你不阻止到，到最后阳爻了，就已经很剥了，懂不懂我的意思。这个由下而上，由内而外，这是剥的象。山在上面，地在下面，诸位知道，如果地在山的上面，叫做地山谦，山在上面，地在下面，山你再高大好了，都是依附在地上面，那你要让山受到损害剥落，一定是在地下面有问题，那剥，你看，由内而外，由下而上，你哪天出去的时候，或者到一个地方上班，你一去，你一看不对，周围看到你的样子不对，你就知道，剥之道来了。这个剥之道一定个由内而外，造成你今天的剥，可能来自你的太太，来自你的朋友，了解你的人才剥得到你，一个国家会受到剥害，也是由内而外，反过来，我们要把一个国家打败，也是从内而外把它打败。所以最坚强的堡垒是从内部开始破坏的。 
-所以过去的军师打仗也是用剥，如果利用剥，剥之道一定是从里面开始剥，派人当间谍奸细进去。由内而外。 
+### （三）山地剥 [䷙]
+这个剥卦的来源是贲之极。万事到了极限，太过了，而招剥，剥就是损害啊，脱落啊，招凶。诸位看卦爻，从1到5都是阴，到最顶才是阳，意思就是说，如果你一开始发现小人，你不阻止到，到最后阳爻了，就已经很剥了，懂不懂我的意思。这个由下而上，由内而外，这是剥的象。山在上面，地在下面，诸位知道，如果地在山的上面，叫做地山谦，山在上面，地在下面，山你再高大好了，都是依附在地上面，那你要让山受到损害剥落，一定是在地下面有问题，那剥，你看，由内而外，由下而上，你哪天出去的时候，或者到一个地方上班，你一去，你一看不对，周围看到你的样子不对，你就知道，剥之道来了。这个剥之道一定个由内而外，造成你今天的剥，可能来自你的太太，来自你的朋友，了解你的人才剥得到你，一个国家会受到剥害，也是由内而外，反过来，我们要把一个国家打败，也是从内而外把它打败。所以最坚强的堡垒是从内部开始破坏的。所以过去的军师打仗也是用剥，如果利用剥，剥之道一定是从里面开始剥，派人当间谍奸细进去。由内而外。 
+
+#### 1.卦象
 卦象看起来，山呢是外止，地是什么，内顺，外卦是止，内卦是顺，是为剥的象。简单举个例你就懂了，你看那个小孩子一出来，哟怎么那么乖啊，外面不敢动，然后内心又很柔顺，这就是他的智慧被大人剥削了，小孩子呢训练他，你要让他平常心，小孩子有童蒙啊，他什么都好奇，什么都问，开朗的好，一看这个小孩子怎么搞的，外止内顺，什么都是乖宝宝，就完了。剥的象就出来了，大人来剥小孩子的智慧，你想尽办法把你小孩子教成乖宝宝，就是想尽办法让他从聪明变成笨蛋。知道不知道，一定要让他平常心，让他明辨是非，不要让他知道什么样的事情，都要让他自己去看，让他平常心，有开放的智慧去考虑，就深思啊，才行哦。什么东西都去制止制止，哦，结果这个小孩子就是毁在你手上面，所以教很重要，千万不要剥。现在很多人就是想办法把小孩子教成这样。很可怕哦。 
+
+#### 2.人间道
 在人间道：1. 君子事天，事之始，知盈亏，消息，知道进退之道在哪里，知道如何处理。这个呢，顺之则吉。逆之则凶。因为他事天，我们讲天道，包括算命、易经怎么的，事情发生之始，我们看一个人讲话，听一个人讲话，一个动作，事情在开始的时候，我们就已经知道他的盈亏了，所以君子事天，小人呢事人。不见事始之作为如何，也不论事之盈亏如何，为什么说盈亏，因为天上日月，太阳也不是整天能看到太阳，月亮也不是整天能看到月亮，日月也有盈亏，他为什么事人，小人专门一昧奉承迎合。现在这种人太多了，所以当官的人观念错了，他只知道迎合，只知道当官，你今天当官，人民给你那么大的权力，就是要你替我做事，你还在摆官威，还要表现一下你要升官赶快迎合我，不迎合我的话，好，会迎合巴结奉承的人就会当官，所以现在小人当道。 
-这个有一个君王之剥，你要去看天纪。我要写在天纪里面，那你看得到看不到看你愿意不愿意去看。如果你看到你会逃过一劫，但是这里我不讲。让你去买录影带。 
-处剥之时，易经啊，当你被剥的时候，如何应对，我们从初爻一直谈到六爻，中间看到第五爻，君王处剥，如果你是个总统，到了第五爻，剥，我不讲。看我写的天纪会不会改变一点。 
-剥到极限的时候，天下大乱，太好了，因为物极必反，对不对，因为天下到了乱极的时候，我们知道，君道必复，君子之道一定会复回来。小人呢，无处藏啊，因为乱极，人心是这样子的哦，如果我们讲孟子性善荀子的性恶说，讲不完啊，就好像说中医好还是西医好，讲不完的，人心你不要说善还是恶，但是人心呢，都是从善如流，那我们就可以知道，如果天下大乱的时候，诸位都不要紧张，天下大乱的时候股票一定大跌房价也一定大跌，赶快去买，相信我的话哦，人弃我捡，夏天时候买皮袄，冬天的时候买棉布啊。范蠡嘛，不要忘了，赶快去买，放心，taiwan不会有事的。这个君子之道会恢复，因为人民乱而失志，很快就会回来，治世来临的时候，天下之间法是最大。这就对了，我们要法制的国家，我们不要人治的国家，现在mailand和taiwan都是在人治，不对哦，人治的话，今天要改宪法就改了，法治的国家哪那么简单改啊。所以我们要求法治的才对。易经也是这样讲的哦，因为人的性啊，是从善如流。这里为什么我们常常讲一些宗教的事情，因为很多人都是从善如流，坏人 就会利用这一点，佛家都崇尚做好事，结果都讲佛在做好事，不讲人在做好事，人会用宗教来骗人嘛，为什么讲佛教呢，讲人去做好事嘛，懂不懂我的意思，要强调这个嘛，你说人做好事，人就是佛，那你就是说佛是好的，难道基督天主教新教就不好啊，是不是该到地狱去了，这个人没有信教但是他在做好事，比你信教不做好事的，哪个来的好。懂不懂我的意思，所以传宗教的人，一定要晓得人心是从善如流的，讲这个善，做好的事情，是你做的，懂不懂，不要说是佛家在做的，好了，造成我的基督教的我绝对不会说谎，来了，谁说的。哦，骗子一大堆。你看骗子知道他如何骗你，讲话手在那里晃，就是在骗你嘛。眼睛在那里是猪眼，猪眼最会骗人的。眼珠子是这样子，旁边都是黄黄的血丝： 
+
+这个有一个君王之剥，你要去看天纪。我要写在天纪里面，那你看得到看不到看你愿意不愿意去看。如果你看到你会逃过一劫，但是这里我不讲。让你去买录影带。处剥之时，易经啊，当你被剥的时候，如何应对，我们从初爻一直谈到六爻，中间看到第五爻，君王处剥，如果你是个总统，到了第五爻，剥，我不讲。看我写的天纪会不会改变一点。 
+
+剥到极限的时候，天下大乱，太好了，因为物极必反，对不对，因为天下到了乱极的时候，我们知道，君道必复，君子之道一定会复回来。小人呢，无处藏啊，因为乱极，人心是这样子的哦，如果我们讲孟子性善荀子的性恶说，讲不完啊，就好像说中医好还是西医好，讲不完的，人心你不要说善还是恶，但是人心呢，都是从善如流，那我们就可以知道，如果天下大乱的时候，诸位都不要紧张，天下大乱的时候股票一定大跌房价也一定大跌，赶快去买，相信我的话哦，人弃我捡，夏天时候买皮袄，冬天的时候买棉布啊。范蠡嘛，不要忘了，赶快去买，放心，taiwan不会有事的。这个君子之道会恢复，因为人民乱而失志，很快就会回来，治世来临的时候，天下之间法是最大。这就对了，我们要法制的国家，我们不要人治的国家，现在大陆和台湾都是在人治，不对哦，人治的话，今天要改宪法就改了，法治的国家哪那么简单改啊。所以我们要求法治的才对。易经也是这样讲的哦，因为人的性啊，是从善如流。这里为什么我们常常讲一些宗教的事情，因为很多人都是从善如流，坏人 就会利用这一点，佛家都崇尚做好事，结果都讲佛在做好事，不讲人在做好事，人会用宗教来骗人嘛，为什么讲佛教呢，讲人去做好事嘛，懂不懂我的意思，要强调这个嘛，你说人做好事，人就是佛，那你就是说佛是好的，难道基督天主教新教就不好啊，是不是该到地狱去了，这个人没有信教但是他在做好事，比你信教不做好事的，哪个来的好。懂不懂我的意思，所以传宗教的人，一定要晓得人心是从善如流的，讲这个善，做好的事情，是你做的，懂不懂，不要说是佛家在做的，好了，造成我的基督教的我绝对不会说谎，来了，谁说的。哦，骗子一大堆。你看骗子知道他如何骗你，讲话手在那里晃，就是在骗你嘛。眼睛在那里是猪眼，猪眼最会骗人的。眼珠子是这样子，旁边都是黄黄的血丝： 
 
 这就是大骗子嘛。像我们一看就知道，就走了，听多才会被人骗。所以君子言简刚中啊，山水蒙，讲话讲两三句话就讲完了，如果很多名词讲了半天我就是要骗你，懂不懂。不要骗你，两三句话就讲完了。 
 那君王处剥，如何用，易经叫做贯鱼。那上面叫贯鱼，自己去看我写的天纪。不教，看书！花钱买啊。 
 占卜： 
 
-![山火贲]()
+#### 3.读图
 
-![山火贲]()
-第一个，妇人床上坐，代表阴人得势，如果你是太太一卜，一定是婆婆在那里作怪，那如果是当官的，那一定是代表上面一定有阴人在做官。阴人得势呢，除了指女人以外，也指的是小人，所以一定有暗灾，必有暗灾，要小心哦，背后有人偷偷要害你，所以呢，或者是小人为主管。 
-第二个，烛在风中，险也，危险。有两种状况，气色上可以看到，1.面如枯槁。就是人都枯萎了，头发都没有油了，干干的枯起来了，我们脸上的油和头发上的油，叫做气。隐在皮肤下面的颜色就叫做色。摸摸看鼻子出油，要是鼻子没有油了，头发也没有油了，就是险也，快死了。2.面如潮红，整个脸是红色的，你说老师他的气色很好我说他快要死了，这个红是没有亮的红。就好像整个血色浮起来一样，这种往往都是中毒的样子，就是危险，我们相上面这叫做风中残烛。所以如果你在那边打麻将，你看对面自摸的那个人呢，头发是蓬起来了，快死了，懂不懂我的意思。他的原因不见得是身体重病，可能明天就出车祸死掉，两个礼拜内可以看到这个气色。3.那还有，有的时候临床上看到的是，蓝色，其实就是青色的，我们以节气来说，40个节气，木火土金水，木是青色的，土是黄色的，金是白色的，水是黑色的，木是春天，火是夏天，金是秋天，水是冬天，五行相生，如果我们在相生的时间看到气色，代表吉，相克的时间，代表凶。比如你在秋天的时候在打高尔夫球，看到一个人，脸上发青，有没有，这个人很快就会买单哦。春天的时候发青无所谓啦。哦，以此类推下去。 
-第三，葫芦在地上，代表医药无救，如果你卜疾病，完了，医药无救。暗中有毒计，也是，你暗中葫芦里面卖什么药啊。卜疾病的话，卜到这个山地剥很危险。非常的危险。 
-第四，缫丝，一团乱丝在地上，代表这个事情非常繁琐，诸位在这里要记得一点，有一个人尽量把事情弄得越来越简单，有一个人在尽量把事情弄得越来越复杂，前一个人就是诚实不会骗你的，越弄越复杂的就是想骗你。他让你搞不清楚嘛，想骗你。 
-第五，山下有官人坐，代表有靠山，但是阴人为祸，即使你有靠山，但是有阴人为祸，有小人在后面 害你。 
-第六，冠巾挂树上，有求去的象，我不干了，还有安乐的象。过去历史上有出现过，为什么安乐呢，白色的丝巾挂在木头上面，这不是樂嘛。所以杨贵妃就死在这上面，如果属木上面带一个帽子，不就是宋嘛，如果树木上面加一个尺，不是朱嘛，所以中国人是读图，你不要读字。 
+![山地剥](https://preview.cloud.189.cn/image/imageAction?param=EC95D54401363C872042268C134E39EFB0F6E0A2F9A0F84461B994A7D087293A3AB13E5BF8BFA542FD2F5C244F0B65E482AA5520F08180ABC5148C1E77FD7563121686A62CB832EE868B9937185F1826C575E49E164A40B451EAA9979F85DAD51277CE4BA84C5512D79260C89C708000)
+
+![山地剥](https://preview.cloud.189.cn/image/imageAction?param=26731DFC2C74453E95BB6CD5A06448E1F5B306DDBE00302E896E761CB81CC69559D141CE98FB2F643CA8C1DE77702647D1FDC739A710577618676E76ED919EE3A496DE0D0615B8699B40EE0085E53C39EA4B68AD454C2415629CF4540C12355032435F5FA4E13D775A4466B0E1364DBD)
+
+- 第一个，妇人床上坐，代表阴人得势，如果你是太太一卜，一定是婆婆在那里作怪，那如果是当官的，那一定是代表上面一定有阴人在做官。阴人得势呢，除了指女人以外，也指的是小人，所以一定有暗灾，必有暗灾，要小心哦，背后有人偷偷要害你，所以呢，或者是小人为主管。
+- 第二个，烛在风中，险也，危险。有两种状况，气色上可以看到，1.面如枯槁。就是人都枯萎了，头发都没有油了，干干的枯起来了，我们脸上的油和头发上的油，叫做气。隐在皮肤下面的颜色就叫做色。摸摸看鼻子出油，要是鼻子没有油了，头发也没有油了，就是险也，快死了。2.面如潮红，整个脸是红色的，你说老师他的气色很好我说他快要死了，这个红是没有亮的红。就好像整个血色浮起来一样，这种往往都是中毒的样子，就是危险，我们相上面这叫做风中残烛。所以如果你在那边打麻将，你看对面自摸的那个人呢，头发是蓬起来了，快死了，懂不懂我的意思。他的原因不见得是身体重病，可能明天就出车祸死掉，两个礼拜内可以看到这个气色。3.那还有，有的时候临床上看到的是，蓝色，其实就是青色的，我们以节气来说，40个节气，木火土金水，木是青色的，土是黄色的，金是白色的，水是黑色的，木是春天，火是夏天，金是秋天，水是冬天，五行相生，如果我们在相生的时间看到气色，代表吉，相克的时间，代表凶。比如你在秋天的时候在打高尔夫球，看到一个人，脸上发青，有没有，这个人很快就会买单哦。春天的时候发青无所谓啦。哦，以此类推下去。 
+- 第三，葫芦在地上，代表医药无救，如果你卜疾病，完了，医药无救。暗中有毒计，也是，你暗中葫芦里面卖什么药啊。卜疾病的话，卜到这个山地剥很危险。非常的危险。 
+- 第四，缫丝，一团乱丝在地上，代表这个事情非常繁琐，诸位在这里要记得一点，有一个人尽量把事情弄得越来越简单，有一个人在尽量把事情弄得越来越复杂，前一个人就是诚实不会骗你的，越弄越复杂的就是想骗你。他让你搞不清楚嘛，想骗你。
+- 第五，山下有官人坐，代表有靠山，但是阴人为祸，即使你有靠山，但是有阴人为祸，有小人在后面 害你。
+- 第六，冠巾挂树上，有求去的象，我不干了，还有安乐的象。过去历史上有出现过，为什么安乐呢，白色的丝巾挂在木头上面，这不是樂嘛。所以杨贵妃就死在这上面，如果属木上面带一个帽子，不就是宋嘛，如果树木上面加一个尺，不是朱嘛，所以中国人是读图，你不要读字。 
+
+####　４.阳宅
 阳宅上面来说，整个山地剥，我把总卦讲给你看。比如说这个人居住在很危险的地方，好像风中的残烛一样，心乱如麻，无计可施，为什么呢，阴人当道。这个时候，以退为乐。读完了，是不是？ 
 所以处剥之时呢，闪开一遍，闪远一点。等到剥到极就好了，天下大乱的时候你再出来，人心思变。 
 阳宅上面呢，三儿子居母位。 
-第一，主耗破家业。 
-第二个，心生毒害。你哪天发现你三儿子那么小人，就是这样子。 
-第三，婚事不成。 
-第四，科甲不兴。读书也不好。 
-第五，多灾病，病痛很多。 
+
+- 第一，主耗破家业。
+- 第二个，心生毒害。你哪天发现你三儿子那么小人，就是这样子。
+- 第三，婚事不成。 
+- 第四，科甲不兴。读书也不好。
+- 第五，多灾病，病痛很多。 
 所以这是大凶之地，不是很好。所以不要乱住。 
 
 诸位，刚才就是在提醒你，千万不要把你小孩子教成山地剥哦。所以卦上面有的话，我们在人间道，教育上也要注意，你把小孩子教得外面什么话都听，谁讲的话他也听，好了，被坏人讲话就拐跑了，失踪婴儿就这样来的。你这样教儿子，他一定要坐乖最好，好了，他变成山地剥了。没有自己的主见。他就被剥了懂不懂，然后你就很痛苦了，这个剥由内生嘛。早因在自己身上哦。一定要让小孩子要有主见。 
-**************************************************************** 
-地雷复。复卦和剥卦，刚好是反的。 
 
-剥到极限了以后，人民会思变，思治，治世会来临，君子之道始复，刚开始恢复的时候，所以阳生在下面，众阴还在上面，懂不懂，复之道就在这里，刚开始，始复。那么刚开始始复的时候，有人发现，这样很好啊，你光是一个人，独木难支，难撑大局。一个人力量太弱，一定要众心协力，就成了哦，如果人人敢讲话，每天台北市几百万人统统聚过来说lidenghui你不能精选总统，他就下台了。可是君子之道始复。一定要众人协力才能够成。这个卦呢，外顺内动，如果你没有动，止的话，就是剥啦。雷在地下，易经也讲阴阳，易经没有电学，但是他知道阴和阳碰到一起，就会生雷，那雷刚开始，初阳的时候，雷在地下面，就好像冬天，冬天的时候，冬天到很冷的时候就到冬至了，冬至的时候，同一时间，阳就开始出生了，所以阴到极限会变成阳，那我们现在解释，老师这很难领悟啊，很简单啊，药材中最热的是人参，很热啊，但是人参产在最冷的地方。那硫磺是很寒凉的药，藏在火山口，这都是物的性，所以雷在地下面的时候，就是始复之时。 
+### （四）地雷复 [䷘]
+地雷复。复卦和剥卦，刚好是反的。 剥到极限了以后，人民会思变，思治，治世会来临，君子之道始复，刚开始恢复的时候，所以阳生在下面，众阴还在上面，懂不懂，复之道就在这里，刚开始，始复。那么刚开始始复的时候，有人发现，这样很好啊，你光是一个人，独木难支，难撑大局。一个人力量太弱，一定要众心协力，就成了哦，如果人人敢讲话，每天台北市几百万人统统聚过来说
+
+李登辉你不能竞选总统，他就下台了。可是君子之道始复。一定要众人协力才能够成。这个卦呢，外顺内动，如果你没有动，止的话，就是剥啦。雷在地下，易经也讲阴阳，易经没有电学，但是他知道阴和阳碰到一起，就会生雷，那雷刚开始，初阳的时候，雷在地下面，就好像冬天，冬天的时候，冬天到很冷的时候就到冬至了，冬至的时候，同一时间，阳就开始出生了，所以阴到极限会变成阳，那我们现在解释，老师这很难领悟啊，很简单啊，药材中最热的是人参，很热啊，但是人参产在最冷的地方。那硫磺是很寒凉的药，藏在火山口，这都是物的性，所以雷在地下面的时候，就是始复之时。 
+
+#### 1.人间道
 人间道。 
-第一个，协力可胜。要同心协力才行。 
-第二个，复之始，不失复，贞，易经讲的贞，指的是坚心，刚开始恢复的时候，那个念头很薄弱，不能再失掉，懂不懂，要小心，戒之初。 
-第三个，易经提到，复里面，休复之美。第一爻是什么，是下位，结果是君子，那你的上位，上位的人，能下，能够追从于下位的君子之道的人呢，这叫做体仁。这叫做休复之美，现在谁听下面的。我在上面，我怎么会错，我是登辉啊我怎么会错呢。我信的是基督教我从来不会骗人啊，哦，不可以哦。这是休复之美。 
-第四个呢，频复之戒。就是频频恢复的意思，就是复而又失，失而又复，每天在那里来往，在对和不对之间，复和失去之间来往，不够坚心，这叫做频复之戒，我们要警戒。 
-这个就是迷途不改。后来的问题会很大，因为花了太多时间再失和复之间取舍，没有花很多时间去修身进德。这个时候迷途不改，易经上面说，招凶。 
-第五，学问之道，无他，求学没有什么好特别的，知过立复而已，知道过错马上修正自己。就这四个字而已。很多人学一门学问，学到后来，学到最高顶上，拿到博士以后，他就开始骄傲不得了，有一天发现他的东西，不对，我现在告诉你，他就不是君子了，君子马上就知道他不对了，一定经过我们的假设，再经过验证，还有看结果，比如说你是会计师，你是统计学博士，你是什么什么博士，现在外面博士一大票，他们在研究事情在事前都谈到很多几率，啊百分之七十啊，百分之三十，哎，我是医生，你来找我，哎陈先生你看我开刀下去会怎么样，医生就讲话了，没关系，根据我们的专家的判断我们的统计，这一刀下去百分之七十会好，百分之三十不会好，你们听了以为很好，你们以为你们聪明，我看你们是笨蛋，我听的不对哦，听明，医生对不起哦对你来说是70比30，对我来说，不是1就是0哦。哪有什么70/30的。这就是现在的专家，懂不懂我的意思，拿什么几率嘛，所以很多人，读了书以后，回来了，他研究了很多资料，一个决策者，他需要各方面做很多的资料给他，来增加他的判断，来做决策，结果真正会判断的人，他不会依据这些专家的资料，没有用的，真正决策的人，易经啊，在开始的时候，就知道成败了。四个人下棋，你懂易经之道，就是AB哦，开始下两步棋，我输了，我从新来过，另外两个最后剩下一个帅还在那不认输，你认为哪一个是高手啊，易经在一开始就知道了，所以君子是事天，一开始就有机锋，履霜坚冰至，一开始就晓得了，你还在那边谈什么几率还不相信，错了，错了再回头，人事已非了，懂不懂。你关于就教育一个决策做错了，下面损坏的有多少，因为你一念之错。啊错了没关系我们改过来三年一会，又错了再改过来，每天在那里花时间在那里改，失而复，复而失，有没有，哦，现在就是这样子啊。小人就这样子啊，他不懂啊。会做事的人，不会哦。 
-第六，迷复。执迷不悟。大凶。会做学问的人，始复，一开始就回头，你懂不懂我的意思，不会做学问的人呢，笨蛋呢，到了后来还执迷不悟啊。那就大凶啊。招凶之道。那到了执迷不悟阶段的时候，动则必有过失。时机上面，如果出师，出兵打仗，必败。如果君王入迷复之道的时候，国事凶。所以君子在刚开始发现不对的时候，马上就修正啊。修正有什么关系。 
+- 第一个，协力可胜。要同心协力才行。 
+- 第二个，复之始，不失复，贞，易经讲的贞，指的是坚心，刚开始恢复的时候，那个念头很薄弱，不能再失掉，懂不懂，要小心，戒之初。 
+- 第三个，易经提到，复里面，休复之美。第一爻是什么，是下位，结果是君子，那你的上位，上位的人，能下，能够追从于下位的君子之道的人呢，这叫做体仁。这叫做休复之美，现在谁听下面的。我在上面，我怎么会错，我是登辉啊我怎么会错呢。我信的是基督教我从来不会骗人啊，哦，不可以哦。这是休复之美。 
+- 第四个呢，频复之戒。就是频频恢复的意思，就是复而又失，失而又复，每天在那里来往，在对和不对之间，复和失去之间来往，不够坚心，这叫做频复之戒，我们要警戒。 这个就是迷途不改。后来的问题会很大，因为花了太多时间再失和复之间取舍，没有花很多时间去修身进德。这个时候迷途不改，易经上面说，招凶。 
+- 第五，学问之道，无他，求学没有什么好特别的，知过立复而已，知道过错马上修正自己。就这四个字而已。很多人学一门学问，学到后来，学到最高顶上，拿到博士以后，他就开始骄傲不得了，有一天发现他的东西，不对，我现在告诉你，他就不是君子了，君子马上就知道他不对了，一定经过我们的假设，再经过验证，还有看结果，比如说你是会计师，你是统计学博士，你是什么什么博士，现在外面博士一大票，他们在研究事情在事前都谈到很多几率，啊百分之七十啊，百分之三十，哎，我是医生，你来找我，哎陈先生你看我开刀下去会怎么样，医生就讲话了，没关系，根据我们的专家的判断我们的统计，这一刀下去百分之七十会好，百分之三十不会好，你们听了以为很好，你们以为你们聪明，我看你们是笨蛋，我听的不对哦，听明，医生对不起哦对你来说是70比30，对我来说，不是1就是0哦。哪有什么70/30的。这就是现在的专家，懂不懂我的意思，拿什么几率嘛，所以很多人，读了书以后，回来了，他研究了很多资料，一个决策者，他需要各方面做很多的资料给他，来增加他的判断，来做决策，结果真正会判断的人，他不会依据这些专家的资料，没有用的，真正决策的人，易经啊，在开始的时候，就知道成败了。四个人下棋，你懂易经之道，就是AB哦，开始下两步棋，我输了，我从新来过，另外两个最后剩下一个帅还在那不认输，你认为哪一个是高手啊，易经在一开始就知道了，所以君子是事天，一开始就有机锋，履霜坚冰至，一开始就晓得了，你还在那边谈什么几率还不相信，错了，错了再回头，人事已非了，懂不懂。你关于就教育一个决策做错了，下面损坏的有多少，因为你一念之错。啊错了没关系我们改过来三年一会，又错了再改过来，每天在那里花时间在那里改，失而复，复而失，有没有，哦，现在就是这样子啊。小人就这样子啊，他不懂啊。会做事的人，不会哦。 
+- 第六，迷复。执迷不悟。大凶。会做学问的人，始复，一开始就回头，你懂不懂我的意思，不会做学问的人呢，笨蛋呢，到了后来还执迷不悟啊。那就大凶啊。招凶之道。那到了执迷不悟阶段的时候，动则必有过失。时机上面，如果出师，出兵打仗，必败。如果君王入迷复之道的时候，国事凶。所以君子在刚开始发现不对的时候，马上就修正啊。修正有什么关系。
+
 当你遇到执迷不悟的时候，比如说你的小孩子，刚开始，他吸毒，一次回来被你狠狠地毒打一顿，每次都抓住他毒打，从此就不相信他会吸毒，要刚柔并用个，狠狠打一顿，夫妻两个一起打，打完第二天还是要准备便当让他准备去上课哦，不要讲了，他以后就不敢，那等到他后来积重难返执迷不悟的时候，已经无救了。国君如果到这里，国家就很危险了。你这个时候再出兵，很危险。动则必有过失，所以诸位你看外面很多制造问题的人，都是执迷不悟的人。 
+
+
 那你问执迷不悟的人眼睛长什么样子，我画给你看。我看太多了。眼睛就告诉你，我就是执迷不悟的。眼睛长成这个样子，两眼无神，似睁不睁的样子， 
 
 很多人眼睛就是这样子，好累哦。所以你发现你周围两眼无神，眼睛涣散，睁开的，好像早上睡觉起来没有睡醒的样子，执迷不悟。这种人不能动，一动就是纠纷来了。都是trouble maker。 
 
+#### 2.读图
 好图上面来看，占卜。 
 
-第一个，官人乘车，代表大使。使节，如果车姓，连姓，战姓，军队，还有代表大官调职的象。 
-第二，上面有两只旗在动，诸位看，两个旗，鬥也，相斗的象，也代表将帅的象。一方之主的象。 
-第三，堠子东字，诸位看到猴啊，猴发木形，猴子瘦干干的，发木形的人。你如果属猴的人，胖嘟嘟的，就不发哦。要很瘦，要像王永庆那样瘦瘦的。木形大利。 
-还有一个，東字，束怎么念，加一个中心，就是有心约束的象。東字，是十八日，所以是十八日至，也是东。哎奇怪我这个朋友怎么还不来看我，一卜，十八日到。 
-如果是卜到升迁，字比较难读，图比较好读。哎我怎么升迁命令还没有发布，一卜得到地雷复，哎，先生啊，十日有没有，来人，这是一个来，十天会来人，因此，十日来人封侯。数是十日，这是升官的时机。 
-第四，一个将，持刀立，武威之人。或者是司法执行人。比如说刀斧手站在那边，法警啊，都是。 
-第五，一个兔子。兔子呢，代表属兔的人，或者是刘姓的人。老师刘跟兔有什么关系，劉上面不是一个卯嘛，卯是不是兔子啊。金刀插在地上面，就是兔子，讲的就是刘。所以汉朝开国的刘邦，姓刘，金刀插在地上，读图读到，所以刘是我们的大姓。当然，李也是我们的大姓啊，唐朝李家天下。 
-第六，一只老虎，讲什么，肖虎的人，王姓的人。 
+![地雷复](https://preview.cloud.189.cn/image/imageAction?param=7B4BCEC35129CF8E98E8706B692DFF190435DD62C0BA684AC90CEAAC726F78CDFE4E7A5360D57A79694F616147A8499B31816CFED891255AF960E694387752085061FBC5F2DFC47B791485A1E2BC504DC7AE9AAFF9BFC48A8CB16ADC35473B8DAD7B16F163CB8A2066910615FFFEB6BF)
+
+![地雷复](https://preview.cloud.189.cn/image/imageAction?param=6A2D2A1BADD99A486381F60547C33A9B8D4A0CFAC67627B47751ADA3363E6136AD7F787038F44D6782963D457306C52FB7810D6109E4DE026BF9660C398719EE3D5FC5EB63152FA3ADAC6D121D61AD68B744A7C87C02385F8FD88AAA914987F3E2A8192E53A922C2658F81BF61C3C5C3)
+
+- 第一个，官人乘车，代表大使。使节，如果车姓，连姓，战姓，军队，还有代表大官调职的象。
+- 第二，上面有两只旗在动，诸位看，两个旗，鬥也，相斗的象，也代表将帅的象。一方之主的象。
+- 第三，堠子东字，诸位看到猴啊，猴发木形，猴子瘦干干的，发木形的人。你如果属猴的人，胖嘟嘟的，就不发哦。要很瘦，要像王永庆那样瘦瘦的。木形大利。 还有一个，東字，束怎么念，加一个中心，就是有心约束的象。東字，是十八日，所以是十八日至，也是东。哎奇怪我这个朋友怎么还不来看我，一卜，十八日到。 如果是卜到升迁，字比较难读，图比较好读。哎我怎么升迁命令还没有发布，一卜得到地雷复，哎，先生啊，十日有没有，来人，这是一个来，十天会来人，因此，十日来人封侯。数是十日，这是升官的时机。 
+- 第四，一个将，持刀立，武威之人。或者是司法执行人。比如说刀斧手站在那边，法警啊，都是。 
+- 第五，一个兔子。兔子呢，代表属兔的人，或者是刘姓的人。老师刘跟兔有什么关系，劉上面不是一个卯嘛，卯是不是兔子啊。金刀插在地上面，就是兔子，讲的就是刘。所以汉朝开国的刘邦，姓刘，金刀插在地上，读图读到，所以刘是我们的大姓。当然，李也是我们的大姓啊，唐朝李家天下。 
+- 第六，一只老虎，讲什么，肖虎的人，王姓的人。
+
+#### 3.阳宅 
 阳宅部分，母居长子位，成格，妈妈住到大儿子的位置，地雷复，父母住在东宫上面，对于父亲来说，是天雷，对妈妈来说就是地雷。 
-第一个呢，女生男性，太太走出来像男人，先生走出来像女人，这就是地雷复哦。 
-第二个，武职大利。如果太太结婚，又是武官，住地雷复，哇你很厉害。 
-第三个，代夫出征。 
-第四个呢，发官不发财。如果你当官的可以，做生意的住在地雷复上面，没有用哦。不可以乱改。 
-第五，夫妻婚凶。原因，夫招官讼，官司。妻壮，女孩子太强了。因为这样子，离婚的原因就是这样子。地雷复。婚姻非常不好，如果你住在复卦上面，赶快搬走。但是利发武职。武职大利。 
+- 第一个呢，女生男性，太太走出来像男人，先生走出来像女人，这就是地雷复哦。 
+- 第二个，武职大利。如果太太结婚，又是武官，住地雷复，哇你很厉害。 
+- 第三个，代夫出征。 
+- 第四个呢，发官不发财。如果你当官的可以，做生意的住在地雷复上面，没有用哦。不可以乱改。
+- 第五，夫妻婚凶。原因，夫招官讼，官司。妻壮，女孩子太强了。因为这样子，离婚的原因就是这样子。地雷复。婚姻非常不好，如果你住在复卦上面，赶快搬走。但是利发武职。武职大利。 
+
+
 有没有什么疑问。诸位看我们易经上面图上的字的时候，测字也是一样的哦。测字抓机锋。懂不懂我的意思。 
